@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.cli;
 
 import static java.util.logging.Level.FINE;
@@ -31,6 +32,7 @@ import hudson.cli.client.Messages;
 import jakarta.websocket.ClientEndpointConfig;
 import jakarta.websocket.Endpoint;
 import jakarta.websocket.EndpointConfig;
+import jakarta.websocket.HandshakeResponse;
 import jakarta.websocket.Session;
 import java.io.DataInputStream;
 import java.io.File;
@@ -42,11 +44,14 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
 import java.security.KeyPair;
 import java.security.SecureRandom;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -54,20 +59,19 @@ import java.util.Properties;
 import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
-import javax.net.ssl.SSLSession;
 import javax.net.ssl.TrustManager;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang.StringUtils;
 import org.glassfish.tyrus.client.ClientManager;
 import org.glassfish.tyrus.client.ClientProperties;
+import org.glassfish.tyrus.client.SslEngineConfigurator;
+import org.glassfish.tyrus.client.exception.DeploymentHandshakeException;
 import org.glassfish.tyrus.container.jdk.client.JdkClientContainer;
 
 /**
  * CLI entry point to Jenkins.
  */
+@SuppressFBWarnings(value = "CRLF_INJECTION_LOGS", justification = "We don't care about this behavior")
 public class CLI {
 
     private CLI() {}
@@ -80,9 +84,10 @@ public class CLI {
      * @throws NotTalkingToJenkinsException when connection is not made to Jenkins service.
      */
     /*package*/ static void verifyJenkinsConnection(URLConnection c) throws IOException {
-        if (c.getHeaderField("X-Hudson")==null && c.getHeaderField("X-Jenkins")==null)
+        if (c.getHeaderField("X-Hudson") == null && c.getHeaderField("X-Jenkins") == null)
             throw new NotTalkingToJenkinsException(c);
     }
+
     /*package*/ static final class NotTalkingToJenkinsException extends IOException {
         NotTalkingToJenkinsException(String s) {
             super(s);
@@ -106,19 +111,19 @@ public class CLI {
         }
     }
 
-    private enum Mode {HTTP, SSH, WEB_SOCKET}
+    private enum Mode { HTTP, SSH, WEB_SOCKET }
+
     public static int _main(String[] _args) throws Exception {
         List<String> args = Arrays.asList(_args);
         PrivateKeyProvider provider = new PrivateKeyProvider();
 
         String url = System.getenv("JENKINS_URL");
 
-        if (url==null)
+        if (url == null)
             url = System.getenv("HUDSON_URL");
-        
+
         boolean noKeyAuth = false;
 
-        // TODO perhaps allow mode to be defined by environment variable too (assuming $JENKINS_USER_ID can be used for -user)
         Mode mode = null;
 
         String user = null;
@@ -129,11 +134,12 @@ public class CLI {
         String tokenEnv = System.getenv("JENKINS_API_TOKEN");
 
         boolean strictHostKey = false;
+        boolean noCertificateCheck = false;
 
-        while(!args.isEmpty()) {
+        while (!args.isEmpty()) {
             String head = args.get(0);
             if (head.equals("-version")) {
-                System.out.println("Version: "+computeVersion());
+                System.out.println("Version: " + computeVersion());
                 return 0;
             }
             if (head.equals("-http")) {
@@ -167,33 +173,23 @@ public class CLI {
                 printUsage("-remoting mode is no longer supported");
                 return -1;
             }
-            if(head.equals("-s") && args.size()>=2) {
+            if (head.equals("-s") && args.size() >= 2) {
                 url = args.get(1);
-                args = args.subList(2,args.size());
+                args = args.subList(2, args.size());
                 continue;
             }
             if (head.equals("-noCertificateCheck")) {
                 LOGGER.info("Skipping HTTPS certificate checks altogether. Note that this is not secure at all.");
-                SSLContext context = SSLContext.getInstance("TLS");
-                context.init(null, new TrustManager[]{new NoCheckTrustManager()}, new SecureRandom());
-                HttpsURLConnection.setDefaultSSLSocketFactory(context.getSocketFactory());
-                // bypass host name check, too.
-                HttpsURLConnection.setDefaultHostnameVerifier(new HostnameVerifier() {
-                    @Override
-                    @SuppressFBWarnings(value = "WEAK_HOSTNAME_VERIFIER", justification = "User set parameter to skip verifier.")
-                    public boolean verify(String s, SSLSession sslSession) {
-                        return true;
-                    }
-                });
-                args = args.subList(1,args.size());
+                noCertificateCheck = true;
+                args = args.subList(1, args.size());
                 continue;
             }
             if (head.equals("-noKeyAuth")) {
-            	noKeyAuth = true;
-            	args = args.subList(1,args.size());
-            	continue;
+                noKeyAuth = true;
+                args = args.subList(1, args.size());
+                continue;
             }
-            if(head.equals("-i") && args.size()>=2) {
+            if (head.equals("-i") && args.size() >= 2) {
                 File f = getFileFromArguments(args);
                 if (!f.exists()) {
                     printUsage(Messages.CLI_NoSuchFileExists(f));
@@ -202,7 +198,7 @@ public class CLI {
 
                 provider.readFrom(f);
 
-                args = args.subList(2,args.size());
+                args = args.subList(2, args.size());
                 continue;
             }
             if (head.equals("-strictHostKey")) {
@@ -239,7 +235,7 @@ public class CLI {
             break;
         }
 
-        if(url==null) {
+        if (url == null) {
             printUsage(Messages.CLI_NoURL());
             return -1;
         }
@@ -250,9 +246,9 @@ public class CLI {
 
         if (auth == null && bearer == null) {
             // -auth option not set
-            if (StringUtils.isNotBlank(userIdEnv) && StringUtils.isNotBlank(tokenEnv)) {
-                auth = StringUtils.defaultString(userIdEnv).concat(":").concat(StringUtils.defaultString(tokenEnv));
-            } else if (StringUtils.isNotBlank(userIdEnv) || StringUtils.isNotBlank(tokenEnv)) {
+            if ((userIdEnv != null && !userIdEnv.isBlank()) && (tokenEnv != null && !tokenEnv.isBlank())) {
+                auth = userIdEnv.concat(":").concat(tokenEnv);
+            } else if ((userIdEnv != null && !userIdEnv.isBlank()) || (tokenEnv != null && !tokenEnv.isBlank())) {
                 printUsage(Messages.CLI_BadAuth());
                 return -1;
             } // Otherwise, none credentials were set
@@ -263,11 +259,11 @@ public class CLI {
             url += '/';
         }
 
-        if(args.isEmpty())
-            args = Collections.singletonList("help"); // default to help
+        if (args.isEmpty())
+            args = List.of("help"); // default to help
 
         if (mode == null) {
-            mode = Mode.HTTP;
+            mode = Mode.WEB_SOCKET;
         }
 
         LOGGER.log(FINE, "using connection mode {0}", mode);
@@ -300,7 +296,7 @@ public class CLI {
             LOGGER.warning("Warning: -user ignored unless using -ssh");
         }
 
-        CLIConnectionFactory factory = new CLIConnectionFactory();
+        CLIConnectionFactory factory = new CLIConnectionFactory().noCertificateCheck(noCertificateCheck);
         String userInfo = new URL(url).getUserInfo();
         if (userInfo != null) {
             factory = factory.basicAuth(userInfo);
@@ -324,7 +320,13 @@ public class CLI {
 
     @SuppressFBWarnings(value = {"PATH_TRAVERSAL_IN", "URLCONNECTION_SSRF_FD"}, justification = "User provided values for running the program.")
     private static String readAuthFromFile(String auth) throws IOException {
-        return FileUtils.readFileToString(new File(auth.substring(1)), Charset.defaultCharset());
+        Path path;
+        try {
+            path = Paths.get(auth.substring(1));
+        } catch (InvalidPathException e) {
+            throw new IOException(e);
+        }
+        return Files.readString(path, Charset.defaultCharset());
     }
 
     @SuppressFBWarnings(value = {"PATH_TRAVERSAL_IN", "URLCONNECTION_SSRF_FD"}, justification = "User provided values for running the program.")
@@ -338,22 +340,52 @@ public class CLI {
             @Override
             public void onOpen(Session session, EndpointConfig config) {}
         }
+
         class Authenticator extends ClientEndpointConfig.Configurator {
+            HandshakeResponse hr;
             @Override
             public void beforeRequest(Map<String, List<String>> headers) {
                 if (factory.authorization != null) {
-                    headers.put("Authorization", Collections.singletonList(factory.authorization));
+                    headers.put("Authorization", List.of(factory.authorization));
                 }
             }
+            @Override
+            public void afterResponse(HandshakeResponse hr) {
+                this.hr = hr;
+            }
         }
+        var authenticator = new Authenticator();
+
         ClientManager client = ClientManager.createClient(JdkClientContainer.class.getName()); // ~ ContainerProvider.getWebSocketContainer()
         client.getProperties().put(ClientProperties.REDIRECT_ENABLED, true); // https://tyrus-project.github.io/documentation/1.13.1/index/tyrus-proprietary-config.html#d0e1775
-        Session session = client.connectToServer(new CLIEndpoint(), ClientEndpointConfig.Builder.create().configurator(new Authenticator()).build(), URI.create(url.replaceFirst("^http", "ws") + "cli/ws"));
+        if (factory.noCertificateCheck) {
+            SSLContext sslContext = SSLContext.getInstance("TLS");
+            sslContext.init(null, new TrustManager[] {new NoCheckTrustManager()}, new SecureRandom());
+            SslEngineConfigurator sslEngineConfigurator = new SslEngineConfigurator(sslContext);
+            sslEngineConfigurator.setHostnameVerifier((s, sslSession) -> true);
+            client.getProperties().put(ClientProperties.SSL_ENGINE_CONFIGURATOR, sslEngineConfigurator);
+        }
+        Session session;
+        try {
+            session = client.connectToServer(new CLIEndpoint(), ClientEndpointConfig.Builder.create().configurator(authenticator).build(), URI.create(url.replaceFirst("^http", "ws") + "cli/ws"));
+        } catch (DeploymentHandshakeException x) {
+            System.err.println("CLI handshake failed with status code " + x.getHttpStatusCode());
+            if (authenticator.hr != null) {
+                for (var entry : authenticator.hr.getHeaders().entrySet()) {
+                    // org.glassfish.tyrus.core.Utils.parseHeaderValue improperly splits values like Date at commas, so undo that:
+                    System.err.println(entry.getKey() + ": " + String.join(", ", entry.getValue()));
+                }
+                // UpgradeResponse.getReasonPhrase is useless since Jetty generates it from the code,
+                // and the body is not accessible at all.
+            }
+            return 15; // compare CLICommand.main
+        }
         PlainCLIProtocol.Output out = new PlainCLIProtocol.Output() {
             @Override
             public void send(byte[] data) throws IOException {
                 session.getBasicRemote().sendBinary(ByteBuffer.wrap(data));
             }
+
             @Override
             public void close() throws IOException {
                 session.close();
@@ -372,8 +404,15 @@ public class CLI {
         }
     }
 
-    private static int plainHttpConnection(String url, List<String> args, CLIConnectionFactory factory) throws IOException, InterruptedException {
+    private static int plainHttpConnection(String url, List<String> args, CLIConnectionFactory factory)
+            throws GeneralSecurityException, IOException, InterruptedException {
         LOGGER.log(FINE, "Trying to connect to {0} via plain protocol over HTTP", url);
+        if (factory.noCertificateCheck) {
+            SSLContext sslContext = SSLContext.getInstance("TLS");
+            sslContext.init(null, new TrustManager[] {new NoCheckTrustManager()}, new SecureRandom());
+            HttpsURLConnection.setDefaultSSLSocketFactory(sslContext.getSocketFactory());
+            HttpsURLConnection.setDefaultHostnameVerifier((s, sslSession) -> true);
+        }
         FullDuplexHttpStream streams = new FullDuplexHttpStream(new URL(url), "cli?remoting=false", factory.authorization);
         try (ClientSideImpl connection = new ClientSideImpl(new PlainCLIProtocol.FramedOutput(streams.getOutputStream()))) {
             connection.start(args);
@@ -477,19 +516,14 @@ public class CLI {
 
     private static String computeVersion() {
         Properties props = new Properties();
-        try {
-            InputStream is = CLI.class.getResourceAsStream("/jenkins/cli/jenkins-cli-version.properties");
-            if(is!=null) {
-                try {
-                    props.load(is);
-                } finally {
-                    is.close();
-                }
+        try (InputStream is = CLI.class.getResourceAsStream("/jenkins/cli/jenkins-cli-version.properties")) {
+            if (is != null) {
+                props.load(is);
             }
         } catch (IOException e) {
             e.printStackTrace(); // if the version properties is missing, that's OK.
         }
-        return props.getProperty("version","?");
+        return props.getProperty("version", "?");
     }
 
     /**
@@ -520,7 +554,7 @@ public class CLI {
     }
 
     private static void printUsage(String msg) {
-        if(msg!=null)   System.out.println(msg);
+        if (msg != null)   System.out.println(msg);
         System.err.println(usage());
     }
 
