@@ -35,7 +35,6 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.security.KeyPair;
 import java.security.PublicKey;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
@@ -85,7 +84,7 @@ class SSHCLI {
             command.append(' ');
         }
 
-        try(SshClient client = SshClient.setUpDefaultClient()) {
+        try (SshClient client = SshClient.setUpDefaultClient()) {
 
             KnownHostsServerKeyVerifier verifier = new DefaultKnownHostsServerKeyVerifier(new ServerKeyVerifier() {
                 @Override
@@ -114,9 +113,9 @@ class SSHCLI {
                     WaitableFuture wf = channel.open();
                     wf.await();
 
-                    Set<ClientChannelEvent> waitMask = channel.waitFor(Collections.singletonList(ClientChannelEvent.CLOSED), 0L);
+                    Set<ClientChannelEvent> waitMask = channel.waitFor(List.of(ClientChannelEvent.CLOSED), 0L);
 
-                    if(waitMask.contains(ClientChannelEvent.TIMEOUT)) {
+                    if (waitMask.contains(ClientChannelEvent.TIMEOUT)) {
                         throw new SocketTimeoutException("Failed to retrieve command result in time: " + command);
                     }
 
