@@ -1,20 +1,20 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi,
  * Yahoo! Inc., Stephen Connolly, Tom Huybrechts, Alan Harder, Manufacture
  * Francaise des Pneumatiques Michelin, Romain Seguy
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -23,6 +23,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
@@ -61,6 +62,7 @@ import hudson.model.User;
 import hudson.model.View;
 import hudson.scm.SCM;
 import hudson.scm.SCMDescriptor;
+import hudson.search.SearchFactory;
 import hudson.search.SearchableModelObject;
 import hudson.security.ACL;
 import hudson.security.AccessControlled;
@@ -72,6 +74,7 @@ import hudson.security.captcha.CaptchaSupport;
 import hudson.security.csrf.CrumbIssuer;
 import hudson.slaves.Cloud;
 import hudson.slaves.ComputerLauncher;
+import hudson.slaves.JNLPLauncher;
 import hudson.slaves.NodeProperty;
 import hudson.slaves.NodePropertyDescriptor;
 import hudson.slaves.RetentionStrategy;
@@ -92,13 +95,20 @@ import hudson.util.jna.GNUCLibrary;
 import hudson.views.MyViewsTabBar;
 import hudson.views.ViewsTabBar;
 import hudson.widgets.RenderOnDemandClosure;
+import io.jenkins.servlet.ServletExceptionWrapper;
+import io.jenkins.servlet.http.CookieWrapper;
+import io.jenkins.servlet.http.HttpServletRequestWrapper;
+import io.jenkins.servlet.http.HttpServletResponseWrapper;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.io.Serializable;
 import java.io.StringWriter;
-import java.io.UnsupportedEncodingException;
 import java.lang.management.LockInfo;
 import java.lang.management.ManagementFactory;
 import java.lang.management.MonitorInfo;
@@ -115,6 +125,10 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.DecimalFormat;
+import java.text.MessageFormat;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -129,10 +143,12 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.TimeZone;
 import java.util.TreeMap;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Predicate;
 import java.util.logging.Level;
@@ -142,10 +158,9 @@ import java.util.logging.Logger;
 import java.util.logging.SimpleFormatter;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jenkins.console.ConsoleUrlProvider;
+import jenkins.console.DefaultConsoleUrlProvider;
+import jenkins.console.WithConsoleUrl;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.GlobalConfigurationCategory;
 import jenkins.model.Jenkins;
@@ -159,7 +174,7 @@ import org.apache.commons.jelly.Script;
 import org.apache.commons.jelly.XMLOutput;
 import org.apache.commons.jexl.parser.ASTSizeFunction;
 import org.apache.commons.jexl.util.Introspector;
-import org.apache.commons.lang.StringUtils;
+import org.jenkins.ui.icon.Icon;
 import org.jenkins.ui.icon.IconSet;
 import org.jvnet.tiger_types.Types;
 import org.kohsuke.accmod.Restricted;
@@ -169,7 +184,9 @@ import org.kohsuke.stapler.Ancestor;
 import org.kohsuke.stapler.RawHtmlArgument;
 import org.kohsuke.stapler.Stapler;
 import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.springframework.security.access.AccessDeniedException;
 
 /**
@@ -185,10 +202,6 @@ import org.springframework.security.access.AccessDeniedException;
 public class Functions {
     private static final AtomicLong iota = new AtomicLong();
     private static Logger LOGGER = Logger.getLogger(Functions.class.getName());
-
-    @Restricted(NoExternalUse.class)
-    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
-    public static /* non-final */ boolean UI_REFRESH = SystemProperties.getBoolean("jenkins.ui.refresh");
 
     public Functions() {
     }
@@ -211,19 +224,19 @@ public class Functions {
     public static boolean isModelWithChildren(Object o) {
         return o instanceof ModelObjectWithChildren;
     }
-    
+
     @Deprecated
     public static boolean isMatrixProject(Object o) {
         return o != null && o.getClass().getName().equals("hudson.matrix.MatrixProject");
     }
 
     public static String xsDate(Calendar cal) {
-        return Util.XS_DATETIME_FORMATTER.format(cal.getTime());
+        return Util.XS_DATETIME_FORMATTER2.format(cal.toInstant());
     }
 
     @Restricted(NoExternalUse.class)
     public static String iso8601DateTime(Date date) {
-        return Util.XS_DATETIME_FORMATTER.format(date);
+        return Util.XS_DATETIME_FORMATTER2.format(date.toInstant());
     }
 
     /**
@@ -235,7 +248,7 @@ public class Functions {
     }
 
     public static String rfc822Date(Calendar cal) {
-        return Util.RFC822_DATETIME_FORMATTER.format(cal.getTime());
+        return DateTimeFormatter.RFC_1123_DATE_TIME.format(ZonedDateTime.ofInstant(cal.toInstant(), ZoneId.systemDefault()));
     }
 
     /**
@@ -273,8 +286,8 @@ public class Functions {
     }
 
     public static void initPageVariables(JellyContext context) {
-        StaplerRequest currentRequest = Stapler.getCurrentRequest();
-        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse());
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse2());
         String rootURL = currentRequest.getContextPath();
 
         Functions h = new Functions();
@@ -293,8 +306,8 @@ public class Functions {
 
             see https://wiki.jenkins-ci.org/display/JENKINS/Hyperlinks+in+HTML
          */
-        context.setVariable("resURL",rootURL+getResourcePath());
-        context.setVariable("imagesURL",rootURL+getResourcePath()+"/images");
+        context.setVariable("resURL", rootURL + getResourcePath());
+        context.setVariable("imagesURL", rootURL + getResourcePath() + "/images");
         context.setVariable("divBasedFormLayout", true);
         context.setVariable("userAgent", currentRequest.getHeader("User-Agent"));
         IconSet.initPageVariables(context);
@@ -312,12 +325,11 @@ public class Functions {
      *      if c' is not parameterized.
      */
     public static <B> Class getTypeParameter(Class<? extends B> c, Class<B> base, int n) {
-        Type parameterization = Types.getBaseClass(c,base);
-        if (parameterization instanceof ParameterizedType) {
-            ParameterizedType pt = (ParameterizedType) parameterization;
-            return Types.erasure(Types.getTypeArgument(pt,n));
+        Type parameterization = Types.getBaseClass(c, base);
+        if (parameterization instanceof ParameterizedType pt) {
+            return Types.erasure(Types.getTypeArgument(pt, n));
         } else {
-            throw new AssertionError(c+" doesn't properly parameterize "+base);
+            throw new AssertionError(c + " doesn't properly parameterize " + base);
         }
     }
 
@@ -330,9 +342,9 @@ public class Functions {
      * like "-5", "+/-0", "+3".
      */
     public static String getDiffString(int i) {
-        if(i==0)    return "±0";
+        if (i == 0)    return "±0";
         String s = Integer.toString(i);
-        if(i>0)     return "+"+s;
+        if (i > 0)     return "+" + s;
         else        return s;
     }
 
@@ -340,9 +352,9 @@ public class Functions {
      * {@link #getDiffString(int)} that doesn't show anything for +/-0
      */
     public static String getDiffString2(int i) {
-        if(i==0)    return "";
+        if (i == 0)    return "";
         String s = Integer.toString(i);
-        if(i>0)     return "+"+s;
+        if (i > 0)     return "+" + s;
         else        return s;
     }
 
@@ -351,10 +363,10 @@ public class Functions {
      * if there's something to print
      */
     public static String getDiffString2(String prefix, int i, String suffix) {
-        if(i==0)    return "";
+        if (i == 0)    return "";
         String s = Integer.toString(i);
-        if(i>0)     return prefix+"+"+s+suffix;
-        else        return prefix+s+suffix;
+        if (i > 0)     return prefix + "+" + s + suffix;
+        else        return prefix + s + suffix;
     }
 
     /**
@@ -363,27 +375,30 @@ public class Functions {
     public static String addSuffix(int n, String singular, String plural) {
         StringBuilder buf = new StringBuilder();
         buf.append(n).append(' ');
-        if(n==1)
+        if (n == 1)
             buf.append(singular);
         else
             buf.append(plural);
         return buf.toString();
     }
 
-    public static RunUrl decompose(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static RunUrl decompose(StaplerRequest2 req) {
         List<Ancestor> ancestors = req.getAncestors();
 
         // find the first and last Run instances
-        Ancestor f=null,l=null;
+        Ancestor f = null, l = null;
         for (Ancestor anc : ancestors) {
-            if(anc.getObject() instanceof Run) {
-                if(f==null) f=anc;
-                l=anc;
+            if (anc.getObject() instanceof Run) {
+                if (f == null) f = anc;
+                l = anc;
             }
         }
-        if(l==null) return null;    // there was no Run object
+        if (l == null) return null;    // there was no Run object
 
-        String head = f.getPrev().getUrl()+'/';
+        String head = f.getPrev().getUrl() + '/';
         String base = l.getUrl();
 
         String reqUri = req.getOriginalRequestURI();
@@ -400,7 +415,15 @@ public class Functions {
         // Remove that many from request URL, ignoring extra slashes
         String rest = reqUri.replaceFirst("(?:/+[^/]*){" + slashCount + "}", "");
 
-        return new RunUrl( (Run) f.getObject(), head, base, rest);
+        return new RunUrl((Run) f.getObject(), head, base, rest);
+    }
+
+    /**
+     * @deprecated use {@link #decompose(StaplerRequest2)}
+     */
+    @Deprecated
+    public static RunUrl decompose(StaplerRequest req) {
+        return decompose(StaplerRequest.toStaplerRequest2(req));
     }
 
     /**
@@ -408,8 +431,8 @@ public class Functions {
      * @since 1.213
      */
     public static Area getScreenResolution() {
-        Cookie res = Functions.getCookie(Stapler.getCurrentRequest(),"screenResolution");
-        if(res!=null)
+        Cookie res = Functions.getCookie(Stapler.getCurrentRequest2(), "screenResolution");
+        if (res != null)
             return Area.parse(res.getValue());
         return null;
     }
@@ -474,10 +497,10 @@ public class Functions {
         }
 
         private String getUrl(Run n) {
-            if(n ==null)
+            if (n == null)
                 return null;
             else {
-                return head+n.getNumber()+rest;
+                return head + n.getNumber() + rest;
             }
         }
     }
@@ -510,7 +533,7 @@ public class Functions {
 
     /**
      * Gets the system property indicated by the specified key.
-     * 
+     *
      * Delegates to {@link SystemProperties#getString(String)}.
      */
     @Restricted(DoNotUse.class)
@@ -518,29 +541,19 @@ public class Functions {
         return SystemProperties.getString(key);
     }
 
-    /**
-     * Returns true if and only if the UI refresh is enabled.
-     *
-     * @since 2.222
-     */
-    @Restricted(DoNotUse.class)
-    public static boolean isUiRefreshEnabled() {
-        return UI_REFRESH;
-    }
-
     public static Map getEnvVars() {
         return new TreeMap<>(EnvVars.masterEnvVars);
     }
 
     public static boolean isWindows() {
-        return File.pathSeparatorChar==';';
+        return File.pathSeparatorChar == ';';
     }
-    
+
     public static boolean isGlibcSupported() {
         try {
             GNUCLibrary.LIBC.getpid();
             return true;
-        } catch(Throwable t) {
+        } catch (Throwable t) {
             return false;
         }
     }
@@ -568,10 +581,11 @@ public class Functions {
      * @return date, source, level, message+thrown
      * @see SimpleFormatter#format(LogRecord)
      */
+
     private static String[] logRecordPreformat(LogRecord r) {
         String source;
         if (r.getSourceClassName() == null) {
-            source = r.getLoggerName();
+            source = r.getLoggerName() == null ? "" : r.getLoggerName();
         } else {
             if (r.getSourceMethodName() == null) {
                 source = r.getSourceClassName();
@@ -599,11 +613,14 @@ public class Functions {
         return list;
     }
 
-    public static Cookie getCookie(HttpServletRequest req,String name) {
+    /**
+     * @since 2.475
+     */
+    public static Cookie getCookie(HttpServletRequest req, String name) {
         Cookie[] cookies = req.getCookies();
-        if(cookies!=null) {
+        if (cookies != null) {
             for (Cookie cookie : cookies) {
-                if(cookie.getName().equals(name)) {
+                if (cookie.getName().equals(name)) {
                     return cookie;
                 }
             }
@@ -611,13 +628,33 @@ public class Functions {
         return null;
     }
 
-    public static String getCookie(HttpServletRequest req,String name, String defaultValue) {
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String)}
+     */
+    @Deprecated
+    public static javax.servlet.http.Cookie getCookie(javax.servlet.http.HttpServletRequest req, String name) {
+        return CookieWrapper.fromJakartaServletHttpCookie(getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name));
+    }
+
+    /**
+     * @since 2.475
+     */
+    public static String getCookie(HttpServletRequest req, String name, String defaultValue) {
         Cookie c = getCookie(req, name);
-        if(c==null || c.getValue()==null) return defaultValue;
+        if (c == null || c.getValue() == null) return defaultValue;
         return c.getValue();
     }
 
+    /**
+     * @deprecated use {@link #getCookie(HttpServletRequest, String, String)}
+     */
+    @Deprecated
+    public static String getCookie(javax.servlet.http.HttpServletRequest req, String name, String defaultValue) {
+        return getCookie(HttpServletRequestWrapper.toJakartaHttpServletRequest(req), name, defaultValue);
+    }
+
     private static final Pattern ICON_SIZE = Pattern.compile("\\d+x\\d+");
+
     @Restricted(NoExternalUse.class)
     public static String validateIconSize(String iconSize) throws SecurityException {
         if (!ICON_SIZE.matcher(iconSize).matches()) {
@@ -627,43 +664,40 @@ public class Functions {
     }
 
     /**
-     * Gets the suffix to use for YUI JavaScript.
-     */
-    public static String getYuiSuffix() {
-        return DEBUG_YUI ? "debug" : "min";
-    }
-
-    /**
-     * Set to true if you need to use the debug version of YUI.
+     * No longer used, to be removed after enough plugins have adopted a version of the test harness with
+     * <a href="https://github.com/jenkinsci/jenkins-test-harness/pull/874">jenkins-test-harness/pull/874</a> in it.
+     *
+     * @deprecated removed without replacement
      */
     @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
-    public static boolean DEBUG_YUI = SystemProperties.getBoolean("debug.YUI");
+    @Deprecated(forRemoval = true, since = "TODO")
+    public static boolean DEBUG_YUI;
 
     /**
      * Creates a sub map by using the given range (both ends inclusive).
      */
-    public static <V> SortedMap<Integer,V> filter(SortedMap<Integer,V> map, String from, String to) {
-        if(from==null && to==null)      return map;
-        if(to==null)
-            return map.headMap(Integer.parseInt(from)-1);
-        if(from==null)
+    public static <V> SortedMap<Integer, V> filter(SortedMap<Integer, V> map, String from, String to) {
+        if (from == null && to == null)      return map;
+        if (to == null)
+            return map.headMap(Integer.parseInt(from) - 1);
+        if (from == null)
             return map.tailMap(Integer.parseInt(to));
 
-        return map.subMap(Integer.parseInt(to),Integer.parseInt(from)-1);
+        return map.subMap(Integer.parseInt(to), Integer.parseInt(from) - 1);
     }
 
     /**
      * Creates a sub map by using the given range (upper end inclusive).
      */
     @Restricted(NoExternalUse.class)
-    public static <V> SortedMap<Integer,V> filterExcludingFrom(SortedMap<Integer,V> map, String from, String to) {
-        if(from==null && to==null)      return map;
-        if(to==null)
+    public static <V> SortedMap<Integer, V> filterExcludingFrom(SortedMap<Integer, V> map, String from, String to) {
+        if (from == null && to == null)      return map;
+        if (to == null)
             return map.headMap(Integer.parseInt(from));
-        if(from==null)
+        if (from == null)
             return map.tailMap(Integer.parseInt(to));
 
-        return map.subMap(Integer.parseInt(to),Integer.parseInt(from));
+        return map.subMap(Integer.parseInt(to), Integer.parseInt(from));
     }
 
     private static final SimpleFormatter formatter = new SimpleFormatter();
@@ -684,7 +718,7 @@ public class Functions {
     }
 
     public static boolean isCollapsed(String paneId) {
-    	return PaneStatusProperties.forCurrentUser().isCollapsed(paneId);
+        return PaneStatusProperties.forCurrentUser().isCollapsed(paneId);
     }
 
     @Restricted(NoExternalUse.class)
@@ -699,46 +733,63 @@ public class Functions {
     }
 
     @Restricted(NoExternalUse.class)
-    public static String getUserTimeZonePostfix() {
+    public static String getUserTimeZonePostfix(Date date) {
         if (!isUserTimeZoneOverride()) {
             return "";
         }
 
         TimeZone tz = TimeZone.getTimeZone(getUserTimeZone());
-        return tz.getDisplayName(tz.observesDaylightTime(), TimeZone.SHORT);
+        return tz.getDisplayName(tz.inDaylightTime(date), TimeZone.SHORT, getCurrentLocale());
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static long getHourLocalTimezone() {
+        // Work around JENKINS-68215. When JENKINS-68215 is resolved, this logic can be moved back to Jelly.
+        TimeZone tz = TimeZone.getDefault();
+        return TimeUnit.MILLISECONDS.toHours(tz.getRawOffset() + tz.getDSTSavings());
     }
 
     /**
      * Finds the given object in the ancestor list and returns its URL.
      * This is used to determine the "current" URL assigned to the given object,
      * so that one can compute relative URLs from it.
+     *
+     * @since 2.475
      */
-    public static String getNearestAncestorUrl(StaplerRequest req,Object it) {
+    public static String getNearestAncestorUrl(StaplerRequest2 req, Object it) {
         List list = req.getAncestors();
-        for( int i=list.size()-1; i>=0; i-- ) {
+        for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
-            if(anc.getObject()==it)
+            if (anc.getObject() == it)
                 return anc.getUrl();
         }
         return null;
     }
 
     /**
+     * @deprecated use {@link #getNearestAncestorUrl(StaplerRequest2, Object)}
+     */
+    @Deprecated
+    public static String getNearestAncestorUrl(StaplerRequest req, Object it) {
+        return getNearestAncestorUrl(StaplerRequest.toStaplerRequest2(req), it);
+    }
+
+    /**
      * Finds the inner-most {@link SearchableModelObject} in scope.
      */
     public static String getSearchURL() {
-        List list = Stapler.getCurrentRequest().getAncestors();
-        for( int i=list.size()-1; i>=0; i-- ) {
+        List list = Stapler.getCurrentRequest2().getAncestors();
+        for (int i = list.size() - 1; i >= 0; i--) {
             Ancestor anc = (Ancestor) list.get(i);
-            if(anc.getObject() instanceof SearchableModelObject)
-                return anc.getUrl()+"/search/";
+            if (anc.getObject() instanceof SearchableModelObject)
+                return anc.getUrl() + "/search/";
         }
         return null;
     }
 
     public static String appendSpaceIfNotNull(String n) {
-        if(n==null) return null;
-        else        return n+' ';
+        if (n == null) return null;
+        else        return n + ' ';
     }
 
     /**
@@ -748,10 +799,7 @@ public class Functions {
     public static String nbspIndent(String size) {
         int i = size.indexOf('x');
         i = Integer.parseInt(i > 0 ? size.substring(0, i) : size) / 10;
-        StringBuilder buf = new StringBuilder(30);
-        for (int j = 2; j <= i; j++)
-            buf.append("&nbsp;");
-        return buf.toString();
+        return "&nbsp;".repeat(Math.max(0, i - 1));
     }
 
     public static String getWin32ErrorMessage(IOException e) {
@@ -759,10 +807,23 @@ public class Functions {
     }
 
     public static boolean isMultiline(String s) {
-        if(s==null)     return false;
-        return s.indexOf('\r')>=0 || s.indexOf('\n')>=0;
+        if (s == null)     return false;
+        return s.indexOf('\r') >= 0 || s.indexOf('\n') >= 0;
     }
 
+    /**
+     * Percent-encodes space and non-ASCII UTF-8 characters for use in URLs.
+     * <pre>
+     * Input example  1: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]- =
+     * Output example 1: !"%C2%A3$%^&amp;*()_+}{:@~?&gt;&lt;|%C2%AC`,./;'#[]-%20=
+     * </pre>
+     * Notes:
+     * <ul>
+     * <li>a blank space will render as %20</li>
+     * <li>this methods only escapes non-ASCII but leaves other URL-unsafe characters, such as '#'</li>
+     * <li>{@link hudson.Util#rawEncode(String)} in the {@link hudson.Util} library should generally be used instead (do check the documentation for that method)</li>
+     * </ul>
+     */
     public static String encode(String s) {
         return Util.encode(s);
     }
@@ -771,6 +832,13 @@ public class Functions {
      * Shortcut function for calling {@link URLEncoder#encode(String,String)} (with UTF-8 encoding).<br>
      * Useful for encoding URL query parameters in jelly code (as in {@code "...?param=${h.urlEncode(something)}"}).<br>
      * For convenience in jelly code, it also accepts null parameter, and then returns an empty string.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: %26+%22+%27+%3C+%3E
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: %21%22%C2%A3%24%25%5E%26*%28%29_%2B%7D%7B%3A%40%7E%3F%3E%3C%7C%C2%AC%60%2C.%2F%3B%27%23%5B%5D-%3D
+     * </pre>
+     * Note: A blank space will render as + (You can see this in above examples)
      *
      * @since 2.200
      */
@@ -778,42 +846,69 @@ public class Functions {
         if (s == null) {
             return "";
         }
-        try {
-            return URLEncoder.encode(s, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            throw new Error(e); // impossible
-        }
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 
+    /**
+     * Transforms the input string so it renders as written in HTML output: newlines are converted to HTML line breaks, consecutive spaces are retained as {@code &amp;nbsp;}, and HTML metacharacters are escaped.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: &amp;amp; &amp;quot; &amp;#039; &amp;lt; &amp;gt;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !&amp;quot;£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;&amp;#039;#[]-=
+     * </pre>
+     * @see #xmlEscape
+     * @see hudson.Util#escape
+     */
     public static String escape(String s) {
         return Util.escape(s);
     }
 
+    /**
+     * Escapes XML unsafe characters
+     * <pre>
+     * Input example  1: &lt; &gt; &amp;
+     * Output example 1: &amp;lt; &amp;gt; &amp;amp;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !"£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;'#[]-=
+     * </pre>
+     *  @see hudson.Util#xmlEscape
+     */
     public static String xmlEscape(String s) {
         return Util.xmlEscape(s);
     }
 
     public static String xmlUnescape(String s) {
-        return s.replace("&lt;","<").replace("&gt;",">").replace("&amp;","&");
+        return s.replace("&lt;", "<").replace("&gt;", ">").replace("&amp;", "&");
     }
 
+    /**
+     * Escapes a string so it can be used in an HTML attribute value.
+     * <pre>
+     * Input example  1: &amp; " ' &lt; &gt;
+     * Output example 1: &amp;amp; &amp;quot; &amp;#39; &amp;lt; &amp;gt;
+     * Input example  2: !"£$%^&amp;*()_+}{:@~?&gt;&lt;|¬`,./;'#[]-=
+     * Output example 2: !&amp;quot;£$%^&amp;amp;*()_+}{:@~?&amp;gt;&amp;lt;|¬`,./;&amp;#39;#[]-=
+     * </pre>
+     * Note: 2 consecutive blank spaces will not render any special chars.
+     */
     public static String htmlAttributeEscape(String text) {
-        StringBuilder buf = new StringBuilder(text.length()+64);
-        for( int i=0; i<text.length(); i++ ) {
+        StringBuilder buf = new StringBuilder(text.length() + 64);
+        for (int i = 0; i < text.length(); i++) {
             char ch = text.charAt(i);
-            if(ch=='<')
+            if (ch == '<')
                 buf.append("&lt;");
             else
-            if(ch=='>')
+            if (ch == '>')
                 buf.append("&gt;");
             else
-            if(ch=='&')
+            if (ch == '&')
                 buf.append("&amp;");
             else
-            if(ch=='"')
+            if (ch == '"')
                 buf.append("&quot;");
             else
-            if(ch=='\'')
+            if (ch == '\'')
                 buf.append("&#39;");
             else
                 buf.append(ch);
@@ -822,7 +917,7 @@ public class Functions {
     }
 
     public static void checkPermission(Permission permission) throws IOException, ServletException {
-        checkPermission(Jenkins.get(),permission);
+        checkPermission(Jenkins.get(), permission);
     }
 
     public static void checkPermission(AccessControlled object, Permission permission) throws IOException, ServletException {
@@ -839,19 +934,19 @@ public class Functions {
     public static void checkPermission(Object object, Permission permission) throws IOException, ServletException {
         if (permission == null)
             return;
-        
+
         if (object instanceof AccessControlled)
-            checkPermission((AccessControlled) object,permission);
+            checkPermission((AccessControlled) object, permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
-            for(Ancestor anc : Iterators.reverse(ancs)) {
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
+            for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
-                    checkPermission((AccessControlled) o,permission);
+                    checkPermission((AccessControlled) o, permission);
                     return;
                 }
             }
-            checkPermission(Jenkins.get(),permission);
+            checkPermission(Jenkins.get(), permission);
         }
     }
 
@@ -862,7 +957,7 @@ public class Functions {
      *      If null, returns true. This defaulting is convenient in making the use of this method terse.
      */
     public static boolean hasPermission(Permission permission) throws IOException, ServletException {
-        return hasPermission(Jenkins.get(),permission);
+        return hasPermission(Jenkins.get(), permission);
     }
 
     /**
@@ -873,23 +968,26 @@ public class Functions {
         if (permission == null)
             return true;
         if (object instanceof AccessControlled)
-            return ((AccessControlled)object).hasPermission(permission);
+            return ((AccessControlled) object).hasPermission(permission);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
-            for(Ancestor anc : Iterators.reverse(ancs)) {
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
+            for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
-                    return ((AccessControlled)o).hasPermission(permission);
+                    return ((AccessControlled) o).hasPermission(permission);
                 }
             }
             return Jenkins.get().hasPermission(permission);
         }
     }
 
-    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, ServletException {
+    /**
+     * @since 2.475
+     */
+    public static void adminCheck(StaplerRequest2 req, StaplerResponse2 rsp, Object required, Permission permission) throws IOException, ServletException {
         // this is legacy --- all views should be eventually converted to
         // the permission based model.
-        if(required!=null && !Hudson.adminCheck(req, rsp)) {
+        if (required != null && !Hudson.adminCheck(StaplerRequest.fromStaplerRequest2(req), StaplerResponse.fromStaplerResponse2(rsp))) {
             // check failed. commit the FORBIDDEN response, then abort.
             rsp.setStatus(HttpServletResponse.SC_FORBIDDEN);
             rsp.getOutputStream().close();
@@ -897,39 +995,62 @@ public class Functions {
         }
 
         // make sure the user owns the necessary permission to access this page.
-        if(permission!=null)
+        if (permission != null)
             checkPermission(permission);
+    }
+
+   /**
+     * @deprecated use {@link #adminCheck(StaplerRequest2, StaplerResponse2, Object, Permission)}
+     */
+    @Deprecated
+    public static void adminCheck(StaplerRequest req, StaplerResponse rsp, Object required, Permission permission) throws IOException, javax.servlet.ServletException {
+        try {
+            adminCheck(StaplerRequest.toStaplerRequest2(req), StaplerResponse.toStaplerResponse2(rsp), required, permission);
+        } catch (ServletException e) {
+            throw ServletExceptionWrapper.fromJakartaServletException(e);
+        }
     }
 
     /**
      * Infers the hudson installation URL from the given request.
+     *
+     * @since 2.475
      */
-    public static String inferHudsonURL(StaplerRequest req) {
+    public static String inferHudsonURL(StaplerRequest2 req) {
         String rootUrl = Jenkins.get().getRootUrl();
-        if(rootUrl !=null)
+        if (rootUrl != null)
             // prefer the one explicitly configured, to work with load-balancer, frontend, etc.
             return rootUrl;
         StringBuilder buf = new StringBuilder();
         buf.append(req.getScheme()).append("://");
         buf.append(req.getServerName());
-        if(! (req.getScheme().equals("http") && req.getLocalPort()==80 || req.getScheme().equals("https") && req.getLocalPort()==443))
+        if (! (req.getScheme().equals("http") && req.getLocalPort() == 80 || req.getScheme().equals("https") && req.getLocalPort() == 443))
             buf.append(':').append(req.getLocalPort());
         buf.append(req.getContextPath()).append('/');
         return buf.toString();
     }
 
     /**
+     * @deprecated use {@link #inferHudsonURL(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String inferHudsonURL(StaplerRequest req) {
+        return inferHudsonURL(StaplerRequest.toStaplerRequest2(req));
+    }
+
+    /**
      * Returns the link to be displayed in the footer of the UI.
      */
     public static String getFooterURL() {
-        if(footerURL == null) {
+        if (footerURL == null) {
             footerURL = SystemProperties.getString("hudson.footerURL");
-            if(StringUtils.isBlank(footerURL)) {
+            if (footerURL == null || footerURL.isBlank()) {
                 footerURL = "https://www.jenkins.io/";
             }
         }
         return footerURL;
     }
+
     private static String footerURL = null;
 
     public static List<JobPropertyDescriptor> getJobPropertyDescriptors(Class<? extends Job> clazz) {
@@ -940,7 +1061,7 @@ public class Functions {
         return DescriptorVisibilityFilter.apply(job, JobPropertyDescriptor.getPropertyDescriptors(job.getClass()));
     }
 
-    public static List<Descriptor<BuildWrapper>> getBuildWrapperDescriptors(AbstractProject<?,?> project) {
+    public static List<Descriptor<BuildWrapper>> getBuildWrapperDescriptors(AbstractProject<?, ?> project) {
         return BuildWrappers.getFor(project);
     }
 
@@ -952,15 +1073,15 @@ public class Functions {
         return AuthorizationStrategy.all();
     }
 
-    public static List<Descriptor<Builder>> getBuilderDescriptors(AbstractProject<?,?> project) {
+    public static List<Descriptor<Builder>> getBuilderDescriptors(AbstractProject<?, ?> project) {
         return BuildStepDescriptor.filter(Builder.all(), project.getClass());
     }
 
-    public static List<Descriptor<Publisher>> getPublisherDescriptors(AbstractProject<?,?> project) {
+    public static List<Descriptor<Publisher>> getPublisherDescriptors(AbstractProject<?, ?> project) {
         return BuildStepDescriptor.filter(Publisher.all(), project.getClass());
     }
 
-    public static List<SCMDescriptor<?>> getSCMDescriptors(AbstractProject<?,?> project) {
+    public static List<SCMDescriptor<?>> getSCMDescriptors(AbstractProject<?, ?> project) {
         return SCM._for((Job) project);
     }
 
@@ -1062,7 +1183,7 @@ public class Functions {
 
         for (ExtensionComponent<Descriptor> c : exts.getComponents()) {
             Descriptor d = c.getInstance();
-            if (d.getGlobalConfigPage()==null)  continue;
+            if (d.getGlobalConfigPage() == null)  continue;
 
             if (!Jenkins.get().hasPermission(d.getRequiredGlobalConfigPagePermission())) {
                 continue;
@@ -1077,7 +1198,7 @@ public class Functions {
         List<Descriptor> answer = new ArrayList<>(r.size());
         for (Tag d : r) answer.add(d.d);
 
-        return DescriptorVisibilityFilter.apply(Jenkins.get(),answer);
+        return DescriptorVisibilityFilter.apply(Jenkins.get(), answer);
     }
 
     /**
@@ -1103,7 +1224,7 @@ public class Functions {
 
         for (ExtensionComponent<Descriptor> c : exts.getComponents()) {
             Descriptor d = c.getInstance();
-            if (d.getGlobalConfigPage()==null)  continue;
+            if (d.getGlobalConfigPage() == null)  continue;
 
             if (predicate.test(d)) {
                 r.add(new Tag(c.ordinal(), d));
@@ -1114,7 +1235,7 @@ public class Functions {
         List<Descriptor> answer = new ArrayList<>(r.size());
         for (Tag d : r) answer.add(d.d);
 
-        return DescriptorVisibilityFilter.apply(Jenkins.get(),answer);
+        return DescriptorVisibilityFilter.apply(Jenkins.get(), answer);
     }
 
     /**
@@ -1180,11 +1301,11 @@ public class Functions {
         if (object instanceof AccessControlled)
             return hasAnyPermission((AccessControlled) object, permissions);
         else {
-            AccessControlled ac = Stapler.getCurrentRequest().findAncestorObject(AccessControlled.class);
+            AccessControlled ac = Stapler.getCurrentRequest2().findAncestorObject(AccessControlled.class);
             if (ac != null) {
                 return hasAnyPermission(ac, permissions);
             }
-            
+
             return hasAnyPermission(Jenkins.get(), permissions);
         }
     }
@@ -1218,8 +1339,8 @@ public class Functions {
         if (object instanceof AccessControlled)
             checkAnyPermission((AccessControlled) object, permissions);
         else {
-            List<Ancestor> ancs = Stapler.getCurrentRequest().getAncestors();
-            for(Ancestor anc : Iterators.reverse(ancs)) {
+            List<Ancestor> ancs = Stapler.getCurrentRequest2().getAncestors();
+            for (Ancestor anc : Iterators.reverse(ancs)) {
                 Object o = anc.getObject();
                 if (o instanceof AccessControlled) {
                     checkAnyPermission((AccessControlled) o, permissions);
@@ -1243,14 +1364,14 @@ public class Functions {
 
         private StringBuilder buildSuperclassHierarchy(Class c, StringBuilder buf) {
             Class sc = c.getSuperclass();
-            if (sc!=null)   buildSuperclassHierarchy(sc,buf).append(':');
+            if (sc != null)   buildSuperclassHierarchy(sc, buf).append(':');
             return buf.append(c.getName());
         }
 
         @Override
         public int compareTo(Tag that) {
             int r = Double.compare(that.ordinal, this.ordinal);
-            if (r!=0)   return r; // descending for ordinal by reversing the order for compare
+            if (r != 0)   return r; // descending for ordinal by reversing the order for compare
             return this.hierarchy.compareTo(that.hierarchy);
         }
     }
@@ -1258,13 +1379,19 @@ public class Functions {
      * Computes the path to the icon of the given action
      * from the context path.
      */
+
     public static String getIconFilePath(Action a) {
         String name = a.getIconFileName();
-        if (name==null)     return null;
+        if (name == null) {
+            return null;
+        }
+        if (name.startsWith("symbol-")) {
+            return name;
+        }
         if (name.startsWith("/"))
             return name.substring(1);
         else
-            return "images/24x24/"+name;
+            return "images/24x24/" + name;
     }
 
     /**
@@ -1272,70 +1399,70 @@ public class Functions {
      * but handle null gracefully.
      */
     public static int size2(Object o) throws Exception {
-        if(o==null) return 0;
-        return ASTSizeFunction.sizeOf(o,Introspector.getUberspect());
+        if (o == null) return 0;
+        return ASTSizeFunction.sizeOf(o, Introspector.getUberspect());
     }
 
     /**
      * Computes the relative path from the current page to the given item.
      */
     public static String getRelativeLinkTo(Item p) {
-        Map<Object,String> ancestors = new HashMap<>();
-        View view=null;
+        Map<Object, String> ancestors = new HashMap<>();
+        View view = null;
 
-        StaplerRequest request = Stapler.getCurrentRequest();
-        for( Ancestor a : request.getAncestors() ) {
-            ancestors.put(a.getObject(),a.getRelativePath());
-            if(a.getObject() instanceof View)
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
+        for (Ancestor a : request.getAncestors()) {
+            ancestors.put(a.getObject(), a.getRelativePath());
+            if (a.getObject() instanceof View)
                 view = (View) a.getObject();
         }
 
         String path = ancestors.get(p);
-        if(path!=null) {
+        if (path != null) {
             return normalizeURI(path + '/');
         }
 
-        Item i=p;
+        Item i = p;
         String url = "";
-        while(true) {
+        while (true) {
             ItemGroup ig = i.getParent();
-            url = i.getShortUrl()+url;
+            url = i.getShortUrl() + url;
 
-            if(ig== Jenkins.get() || (view != null && ig == view.getOwner().getItemGroup())) {
+            if (ig == Jenkins.get() || (view != null && ig == view.getOwner().getItemGroup())) {
                 assert i instanceof TopLevelItem;
                 if (view != null) {
                     // assume p and the current page belong to the same view, so return a relative path
                     // (even if they did not, View.getItem does not by default verify ownership)
-                    return normalizeURI(ancestors.get(view)+'/'+url);
+                    return normalizeURI(ancestors.get(view) + '/' + url);
                 } else {
                     // otherwise return a path from the root Hudson
-                    return normalizeURI(request.getContextPath()+'/'+p.getUrl());
+                    return normalizeURI(request.getContextPath() + '/' + p.getUrl());
                 }
             }
 
             path = ancestors.get(ig);
-            if(path!=null) {
-                return normalizeURI(path+'/'+url);
+            if (path != null) {
+                return normalizeURI(path + '/' + url);
             }
 
             assert ig instanceof Item; // if not, ig must have been the Hudson instance
             i = (Item) ig;
         }
     }
-    
+
     private static String normalizeURI(String uri) {
         return URI.create(uri).normalize().toString();
     }
-    
+
     /**
      * Gets all the {@link TopLevelItem}s recursively in the {@link ItemGroup} tree.
-     * 
+     *
      * @since 1.512
      */
     public static List<TopLevelItem> getAllTopLevelItems(ItemGroup root) {
       return root.getAllItems(TopLevelItem.class);
     }
-    
+
     /**
      * Gets the relative name or display name to the given item from the specified group.
      *
@@ -1354,41 +1481,41 @@ public class Functions {
         if (p == null) return null;
         if (g == null) return useDisplayName ? p.getFullDisplayName() : p.getFullName();
         String separationString = useDisplayName ? " » " : "/";
-        
+
         // first list up all the parents
-        Map<ItemGroup,Integer> parents = new HashMap<>();
-        int depth=0;
-        while (g!=null) {
+        Map<ItemGroup, Integer> parents = new HashMap<>();
+        int depth = 0;
+        while (g != null) {
             parents.put(g, depth++);
             if (g instanceof Item)
-                g = ((Item)g).getParent();
+                g = ((Item) g).getParent();
             else
                 g = null;
         }
 
         StringBuilder buf = new StringBuilder();
-        Item i=p;
+        Item i = p;
         while (true) {
-            if (buf.length()>0) buf.insert(0,separationString);
-            buf.insert(0,useDisplayName ? i.getDisplayName() : i.getName());
+            if (!buf.isEmpty()) buf.insert(0, separationString);
+            buf.insert(0, useDisplayName ? i.getDisplayName() : i.getName());
             ItemGroup gr = i.getParent();
 
             Integer d = parents.get(gr);
-            if (d!=null) {
-                for (int j=d; j>0; j--) {
-                    buf.insert(0,separationString);
-                    buf.insert(0,"..");
+            if (d != null) {
+                for (int j = d; j > 0; j--) {
+                    buf.insert(0, separationString);
+                    buf.insert(0, "..");
                 }
                 return buf.toString();
             }
 
             if (gr instanceof Item)
-                i = (Item)gr;
+                i = (Item) gr;
             else // Parent is a group, but not an item
                 return null;
         }
     }
-    
+
     /**
      * Gets the name to the given item relative to given group.
      *
@@ -1403,9 +1530,9 @@ public class Functions {
     @Nullable
     public static String getRelativeNameFrom(@CheckForNull Item p, @CheckForNull ItemGroup g) {
         return getRelativeNameFrom(p, g, false);
-    }    
-    
-    
+    }
+
+
     /**
      * Gets the relative display name to the given item from the specified group.
      *
@@ -1422,15 +1549,15 @@ public class Functions {
         return getRelativeNameFrom(p, g, true);
     }
 
-    public static Map<Thread,StackTraceElement[]> dumpAllThreads() {
-        Map<Thread,StackTraceElement[]> sorted = new TreeMap<>(new ThreadSorter());
+    public static Map<Thread, StackTraceElement[]> dumpAllThreads() {
+        Map<Thread, StackTraceElement[]> sorted = new TreeMap<>(new ThreadSorter());
         sorted.putAll(Thread.getAllStackTraces());
         return sorted;
     }
 
     public static ThreadInfo[] getThreadInfos() {
         ThreadMXBean mbean = ManagementFactory.getThreadMXBean();
-        return mbean.dumpAllThreads(mbean.isObjectMonitorUsageSupported(),mbean.isSynchronizerUsageSupported());
+        return mbean.dumpAllThreads(mbean.isObjectMonitorUsageSupported(), mbean.isSynchronizerUsageSupported());
     }
 
     public static ThreadGroupMap sortThreadsAndGetGroupMap(ThreadInfo[] list) {
@@ -1441,12 +1568,12 @@ public class Functions {
 
     // Common code for sorting Threads/ThreadInfos by ThreadGroup
     private static class ThreadSorterBase {
-        protected Map<Long,String> map = new HashMap<>();
+        protected Map<Long, String> map = new HashMap<>();
 
         ThreadSorterBase() {
             ThreadGroup tg = Thread.currentThread().getThreadGroup();
             while (tg.getParent() != null) tg = tg.getParent();
-            Thread[] threads = new Thread[tg.activeCount()*2];
+            Thread[] threads = new Thread[tg.activeCount() * 2];
             int threadsLen = tg.enumerate(threads, true);
             for (int i = 0; i < threadsLen; i++) {
                 ThreadGroup group = threads[i].getThreadGroup();
@@ -1456,8 +1583,8 @@ public class Functions {
 
         protected int compare(long idA, long idB) {
             String tga = map.get(idA), tgb = map.get(idB);
-            int result = (tga!=null?-1:0) + (tgb!=null?1:0);  // Will be non-zero if only one is null
-            if (result==0 && tga!=null)
+            int result = (tga != null ? -1 : 0) + (tgb != null ? 1 : 0);  // Will be non-zero if only one is null
+            if (result == 0 && tga != null)
                 result = tga.compareToIgnoreCase(tgb);
             return result;
         }
@@ -1526,7 +1653,7 @@ public class Functions {
         }
         sb.append('\n');
         StackTraceElement[] stackTrace = ti.getStackTrace();
-        for (int i=0; i < stackTrace.length; i++) {
+        for (int i = 0; i < stackTrace.length; i++) {
             StackTraceElement ste = stackTrace[i];
             sb.append("\tat ").append(ste);
             sb.append('\n');
@@ -1571,12 +1698,21 @@ public class Functions {
         return Collections.emptyList();
     }
 
+    /**
+     * Escape a string so variable values can be used in inline JavaScript in views.
+     * Note that inline JavaScript and especially passing variables is discouraged, see the documentation for alternatives.
+     * <pre>
+     * Input example : \ \\ ' "
+     * Output example: \\ \\\\ \' \"
+     * </pre>
+     * @see <a href="https://www.jenkins.io/doc/developer/security/xss-prevention/#passing-values-to-javascript">Passing values to JavaScript</a>
+     */
     public static String jsStringEscape(String s) {
         if (s == null) return null;
         StringBuilder buf = new StringBuilder();
-        for( int i=0; i<s.length(); i++ ) {
+        for (int i = 0; i < s.length(); i++) {
             char ch = s.charAt(i);
-            switch(ch) {
+            switch (ch) {
             case '\'':
                 buf.append("\\'");
                 break;
@@ -1597,8 +1733,8 @@ public class Functions {
      * Converts "abc" to "Abc".
      */
     public static String capitalize(String s) {
-        if(s==null || s.length()==0) return s;
-        return Character.toUpperCase(s.charAt(0))+s.substring(1);
+        if (s == null || s.isEmpty()) return s;
+        return Character.toUpperCase(s.charAt(0)) + s.substring(1);
     }
 
     public static String getVersion() {
@@ -1615,20 +1751,20 @@ public class Functions {
     public static String getViewResource(Object it, String path) {
         Class clazz = it.getClass();
 
-        if(it instanceof Class)
-            clazz = (Class)it;
-        if(it instanceof Descriptor)
-            clazz = ((Descriptor)it).clazz;
+        if (it instanceof Class)
+            clazz = (Class) it;
+        if (it instanceof Descriptor)
+            clazz = ((Descriptor) it).clazz;
 
-        String buf = Stapler.getCurrentRequest().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
+        String buf = Stapler.getCurrentRequest2().getContextPath() + Jenkins.VIEW_RESOURCE_PATH + '/' +
                 clazz.getName().replace('.', '/').replace('$', '/') +
                 '/' + path;
         return buf;
     }
 
     public static boolean hasView(Object it, String path) throws IOException {
-        if(it==null)    return false;
-        return Stapler.getCurrentRequest().getView(it,path)!=null;
+        if (it == null)    return false;
+        return Stapler.getCurrentRequest2().getView(it, path) != null;
     }
 
     /**
@@ -1637,7 +1773,7 @@ public class Functions {
      * The expression will evaluate to true if scm is null.
      */
     public static boolean defaultToTrue(Boolean b) {
-        if(b==null) return true;
+        if (b == null) return true;
         return b;
     }
 
@@ -1649,7 +1785,7 @@ public class Functions {
      * @since 1.150
      */
     public static <T> T defaulted(T value, T defaultValue) {
-        return value!=null ? value : defaultValue;
+        return value != null ? value : defaultValue;
     }
 
     /**
@@ -1669,6 +1805,7 @@ public class Functions {
         doPrintStackTrace(s, t, null, "", new HashSet<>());
         return s.toString();
     }
+
     private static void doPrintStackTrace(@NonNull StringBuilder s, @NonNull Throwable t, @CheckForNull Throwable higher, @NonNull String prefix, @NonNull Set<Throwable> encountered) {
         if (!encountered.add(t)) {
             s.append("<cycle to ").append(t).append(">\n");
@@ -1741,8 +1878,8 @@ public class Functions {
      * Minimum 5 rows.
      */
     public static int determineRows(String s) {
-        if(s==null)     return 5;
-        return Math.max(5,LINE_END.split(s).length);
+        if (s == null)     return 5;
+        return Math.max(5, LINE_END.split(s).length);
     }
 
     /**
@@ -1776,7 +1913,7 @@ public class Functions {
      */
     public static JellyContext getCurrentJellyContext() {
         JellyContext context = ExpressionFactory2.CURRENT_CONTEXT.get();
-        assert context!=null;
+        assert context != null;
         return context;
     }
 
@@ -1796,8 +1933,8 @@ public class Functions {
      * <strong>Warning:</strong> do not call this with a {@link RunList}, or you will break lazy loading!
      */
     public static <T> List<T> subList(List<T> base, int maxSize) {
-        if(maxSize<base.size())
-            return base.subList(0,maxSize);
+        if (maxSize < base.size())
+            return base.subList(0, maxSize);
         else
             return base;
     }
@@ -1808,12 +1945,12 @@ public class Functions {
     public static String joinPath(String... components) {
         StringBuilder buf = new StringBuilder();
         for (String s : components) {
-            if (s.length()==0)  continue;
+            if (s.isEmpty())  continue;
 
-            if (buf.length()>0) {
-                if (buf.charAt(buf.length()-1)!='/')
+            if (!buf.isEmpty()) {
+                if (buf.charAt(buf.length() - 1) != '/')
                     buf.append('/');
-                if (s.charAt(0)=='/')   s=s.substring(1);
+                if (s.charAt(0) == '/')   s = s.substring(1);
             }
             buf.append(s);
         }
@@ -1826,9 +1963,9 @@ public class Functions {
      *
      * @return null in case the action should not be presented to the user.
      */
-    public static @CheckForNull String getActionUrl(String itUrl,Action action) {
+    public static @CheckForNull String getActionUrl(String itUrl, Action action) {
         String urlName = action.getUrlName();
-        if(urlName==null)   return null;    // Should not be displayed
+        if (urlName == null)   return null;    // Should not be displayed
         try {
             if (new URI(urlName).isAbsolute()) {
                 return urlName;
@@ -1837,27 +1974,46 @@ public class Functions {
             Logger.getLogger(Functions.class.getName()).log(Level.WARNING, "Failed to parse URL for {0}: {1}", new Object[] {action, x});
             return null;
         }
-        if(urlName.startsWith("/"))
-            return joinPath(Stapler.getCurrentRequest().getContextPath(),urlName);
+        if (urlName.startsWith("/"))
+            return joinPath(Stapler.getCurrentRequest2().getContextPath(), urlName);
         else
             // relative URL name
-            return joinPath(Stapler.getCurrentRequest().getContextPath()+'/'+itUrl,urlName);
+            return joinPath(Stapler.getCurrentRequest2().getContextPath() + '/' + itUrl, urlName);
+    }
+
+    /**
+     * Computes the link to the console for the run for the specified object, taking {@link ConsoleUrlProvider} into account.
+     * @param withConsoleUrl the object to compute a console url for (can be {@link Run}, a {@code PlaceholderExecutable}...)
+     * @return the absolute URL for accessing the build console for the given object, or null if there is no console URL defined for the object.
+     * @since 2.433
+     */
+    public static @CheckForNull String getConsoleUrl(WithConsoleUrl withConsoleUrl) {
+        String consoleUrl = withConsoleUrl.getConsoleUrl();
+        return consoleUrl != null ? Stapler.getCurrentRequest().getContextPath() + '/' + consoleUrl : null;
+    }
+
+    /**
+     * @param run the run
+     * @return the Console Provider for the given run, if null, the default Console Provider
+     */
+    public static ConsoleUrlProvider getConsoleProviderFor(Run<?, ?> run) {
+        return Optional.ofNullable(ConsoleUrlProvider.getProvider(run)).orElse(new DefaultConsoleUrlProvider());
     }
 
     /**
      * Escapes the character unsafe for e-mail address.
-     * See http://en.wikipedia.org/wiki/E-mail_address for the details,
+     * See <a href="https://en.wikipedia.org/wiki/Email_address">the Wikipedia page</a> for the details,
      * but here the vocabulary is even more restricted.
      */
     public static String toEmailSafeString(String projectName) {
         // TODO: escape non-ASCII characters
         StringBuilder buf = new StringBuilder(projectName.length());
-        for( int i=0; i<projectName.length(); i++ ) {
+        for (int i = 0; i < projectName.length(); i++) {
             char ch = projectName.charAt(i);
-            if(('a'<=ch && ch<='z')
-            || ('A'<=ch && ch<='Z')
-            || ('0'<=ch && ch<='9')
-            || "-_.".indexOf(ch)>=0)
+            if (('a' <= ch && ch <= 'z')
+            || ('A' <= ch && ch <= 'Z')
+            || ('0' <= ch && ch <= '9')
+            || "-_.".indexOf(ch) >= 0)
                 buf.append(ch);
             else
                 buf.append('_');    // escape
@@ -1868,23 +2024,26 @@ public class Functions {
     /**
      * Obtains the host name of the Hudson server that clients can use to talk back to.
      * <p>
-     * This is primarily used in {@code jenkins-agent.jnlp.jelly} to specify the destination
+     * This was primarily used in {@code jenkins-agent.jnlp.jelly} to specify the destination
      * that the agents talk to.
+     *
+     * @deprecated use {@link JNLPLauncher#getInboundAgentUrl}
      */
+    @Deprecated
     public String getServerName() {
         // Try to infer this from the configured root URL.
         // This makes it work correctly when Hudson runs behind a reverse proxy.
         String url = Jenkins.get().getRootUrl();
         try {
-            if(url!=null) {
+            if (url != null) {
                 String host = new URL(url).getHost();
-                if(host!=null)
+                if (host != null)
                     return host;
             }
         } catch (MalformedURLException e) {
             // fall back to HTTP request
         }
-        return Stapler.getCurrentRequest().getServerName();
+        return Stapler.getCurrentRequest2().getServerName();
     }
 
     /**
@@ -1895,9 +2054,8 @@ public class Functions {
      */
     @Deprecated
     public String getCheckUrl(String userDefined, Object descriptor, String field) {
-        if(userDefined!=null || field==null)   return userDefined;
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (userDefined != null || field == null)   return userDefined;
+        if (descriptor instanceof Descriptor d) {
             return d.getCheckUrl(field);
         }
         return null;
@@ -1908,13 +2066,12 @@ public class Functions {
      * @since 1.528
      */
     public void calcCheckUrl(Map attributes, String userDefined, Object descriptor, String field) {
-        if(userDefined!=null || field==null)   return;
+        if (userDefined != null || field == null)   return;
 
-        if (descriptor instanceof Descriptor) {
-            Descriptor d = (Descriptor) descriptor;
+        if (descriptor instanceof Descriptor d) {
             CheckMethod m = d.getCheckMethod(field);
-            attributes.put("checkUrl",m.toStemUrl());
-            attributes.put("checkDependsOn",m.getDependsOn());
+            attributes.put("checkUrl", m.toStemUrl());
+            attributes.put("checkDependsOn", m.getDependsOn());
         }
     }
 
@@ -1923,19 +2080,26 @@ public class Functions {
      *
      * Used in {@code task.jelly} to decide if the page should be highlighted.
      */
-    public boolean hyperlinkMatchesCurrentPage(String href) throws UnsupportedEncodingException {
-        String url = Stapler.getCurrentRequest().getRequestURL().toString();
+    public boolean hyperlinkMatchesCurrentPage(String href) {
+        String url = Stapler.getCurrentRequest2().getRequestURL().toString();
         if (href == null || href.length() <= 1) return ".".equals(href) && url.endsWith("/");
-        url = URLDecoder.decode(url,"UTF-8");
-        href = URLDecoder.decode(href,"UTF-8");
+        url = URLDecoder.decode(url, StandardCharsets.UTF_8);
+        href = URLDecoder.decode(href, StandardCharsets.UTF_8);
         if (url.endsWith("/")) url = url.substring(0, url.length() - 1);
         if (href.endsWith("/")) href = href.substring(0, href.length() - 1);
 
         return url.endsWith(href);
     }
 
+    /**
+     * @deprecated From JEXL expressions ({@code ${…}}) in {@code *.jelly} files
+     *             you can use {@code [obj]} syntax to construct an {@code Object[]}
+     *             (which may be usable where a {@link List} is expected)
+     *             rather than {@code h.singletonList(obj)}.
+     */
+    @Deprecated
     public <T> List<T> singletonList(T t) {
-        return Collections.singletonList(t);
+        return List.of(t);
     }
 
     /**
@@ -1943,13 +2107,14 @@ public class Functions {
      */
     public static List<PageDecorator> getPageDecorators() {
         // this method may be called to render start up errors, at which point Hudson doesn't exist yet. see JENKINS-3608
-        if(Jenkins.getInstanceOrNull()==null)  return Collections.emptyList();
+        if (Jenkins.getInstanceOrNull() == null)  return Collections.emptyList();
         return PageDecorator.all();
     }
     /**
      * Gets only one {@link SimplePageDecorator}.
      * @since 2.128
      */
+
     public static SimplePageDecorator getSimplePageDecorator() {
         return SimplePageDecorator.first();
     }
@@ -1966,8 +2131,8 @@ public class Functions {
      * Prepend a prefix only when there's the specified body.
      */
     public String prepend(String prefix, String body) {
-        if(body!=null && body.length()>0)
-            return prefix+body;
+        if (body != null && !body.isEmpty())
+            return prefix + body;
         return body;
     }
 
@@ -1975,10 +2140,21 @@ public class Functions {
         return CrumbIssuer.all();
     }
 
-    public static String getCrumb(StaplerRequest req) {
+    /**
+     * @since 2.475
+     */
+    public static String getCrumb(StaplerRequest2 req) {
         Jenkins h = Jenkins.getInstanceOrNull();
         CrumbIssuer issuer = h != null ? h.getCrumbIssuer() : null;
         return issuer != null ? issuer.getCrumb(req) : "";
+    }
+
+    /**
+     * @deprecated use {@link #getCrumb(StaplerRequest2)}
+     */
+    @Deprecated
+    public static String getCrumb(StaplerRequest req) {
+        return getCrumb(req != null ? StaplerRequest.toStaplerRequest2(req) : null);
     }
 
     public static String getCrumbRequestField() {
@@ -1992,11 +2168,11 @@ public class Functions {
     }
 
     public static Locale getCurrentLocale() {
-        Locale locale=null;
-        StaplerRequest req = Stapler.getCurrentRequest();
-        if(req!=null)
+        Locale locale = null;
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
+        if (req != null)
             locale = req.getLocale();
-        if(locale==null)
+        if (locale == null)
             locale = Locale.getDefault();
         return locale;
     }
@@ -2006,7 +2182,7 @@ public class Functions {
      * from {@link ConsoleAnnotatorFactory}s and {@link ConsoleAnnotationDescriptor}s.
      */
     public static String generateConsoleAnnotationScriptAndStylesheet() {
-        String cp = Stapler.getCurrentRequest().getContextPath() + Jenkins.RESOURCE_PATH;
+        String cp = Stapler.getCurrentRequest2().getContextPath() + Jenkins.RESOURCE_PATH;
         StringBuilder buf = new StringBuilder();
         for (ConsoleAnnotatorFactory f : ConsoleAnnotatorFactory.all()) {
             String path = cp + "/extensionList/" + ConsoleAnnotatorFactory.class.getName() + "/" + f.getClass().getName();
@@ -2016,7 +2192,7 @@ public class Functions {
                 buf.append("<link rel='stylesheet' type='text/css' href='").append(path).append("/style.css' />");
         }
         for (ConsoleAnnotationDescriptor d : ConsoleAnnotationDescriptor.all()) {
-            String path = cp+"/descriptor/"+d.clazz.getName();
+            String path = cp + "/descriptor/" + d.clazz.getName();
             if (d.hasScript())
                 buf.append("<script src='").append(path).append("/script.js'></script>");
             if (d.hasStylesheet())
@@ -2059,7 +2235,7 @@ public class Functions {
         }
 
         /* Mask from Extended Read */
-        StaplerRequest req = Stapler.getCurrentRequest();
+        StaplerRequest2 req = Stapler.getCurrentRequest2();
         if (o instanceof Secret || Secret.BLANK_NONSECRET_PASSWORD_FIELDS_WITHOUT_ITEM_CONFIGURE) {
             if (req != null) {
                 Item item = req.findAncestorObject(Item.class);
@@ -2105,7 +2281,7 @@ public class Functions {
             int firstPeriod = part.indexOf(".");
             return slash > 0 && firstPeriod > 0 && slash < firstPeriod;
         }).collect(Collectors.joining(" "));
-        if (StringUtils.isBlank(views)) {
+        if (views == null || views.isBlank()) {
             // fallback to full thread name if there are no apparent views
             return threadName;
         }
@@ -2113,9 +2289,9 @@ public class Functions {
     }
 
     public List filterDescriptors(Object context, Iterable descriptors) {
-        return DescriptorVisibilityFilter.apply(context,descriptors);
+        return DescriptorVisibilityFilter.apply(context, descriptors);
     }
-    
+
     /**
      * Returns true if we are running unit tests.
      */
@@ -2153,28 +2329,39 @@ public class Functions {
         return SystemProperties.getBoolean("hudson.security.WipeOutPermission");
     }
 
+    @Deprecated
     public static String createRenderOnDemandProxy(JellyContext context, String attributesToCapture) {
-        return Stapler.getCurrentRequest().createJavaScriptProxy(new RenderOnDemandClosure(context,attributesToCapture));
+        return Stapler.getCurrentRequest2().createJavaScriptProxy(new RenderOnDemandClosure(context, attributesToCapture));
+    }
+
+    /**
+     * Called from renderOnDemand.jelly to generate the parameters for the proxy object generation.
+     *
+     * @since 2.475
+     */
+    @Restricted(NoExternalUse.class)
+    public static StaplerRequest2.RenderOnDemandParameters createRenderOnDemandProxyParameters(JellyContext context, String attributesToCapture) {
+        return Stapler.getCurrentRequest2().createJavaScriptProxyParameters(new RenderOnDemandClosure(context, attributesToCapture));
     }
 
     public static String getCurrentDescriptorByNameUrl() {
         return Descriptor.getCurrentDescriptorByNameUrl();
     }
-    
+
     public static String setCurrentDescriptorByNameUrl(String value) {
         String o = getCurrentDescriptorByNameUrl();
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", value);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", value);
 
         return o;
     }
 
     public static void restoreCurrentDescriptorByNameUrl(String old) {
-        Stapler.getCurrentRequest().setAttribute("currentDescriptorByNameUrl", old);
+        Stapler.getCurrentRequest2().setAttribute("currentDescriptorByNameUrl", old);
     }
 
     public static List<String> getRequestHeaders(String name) {
         List<String> r = new ArrayList<>();
-        Enumeration e = Stapler.getCurrentRequest().getHeaders(name);
+        Enumeration e = Stapler.getCurrentRequest2().getHeaders(name);
         while (e.hasMoreElements()) {
             r.add(e.nextElement().toString());
         }
@@ -2185,7 +2372,7 @@ public class Functions {
      * Used for arguments to internationalized expressions to avoid escape
      */
     public static Object rawHtml(Object o) {
-        return o==null ? null : new RawHtmlArgument(o);
+        return o == null ? null : new RawHtmlArgument(o);
     }
 
     public static ArrayList<CLICommand> getCLICommands() {
@@ -2211,31 +2398,35 @@ public class Functions {
      */
     @Deprecated
     public String getUserAvatar(User user, String avatarSize) {
-        return getAvatar(user,avatarSize);
+        return getAvatar(user, avatarSize);
     }
-    
-    
+
+
     /**
      * Returns human readable information about file size
-     * 
+     *
      * @param size file size in bytes
      * @return file size in appropriate unit
      */
-    public static String humanReadableByteSize(long size){
+    public static String humanReadableByteSize(long size) {
         String measure = "B";
-        if(size < 1024){
+        if (size < 1024) {
             return size + " " + measure;
         }
         double number = size;
-        if(number>=1024){
-            number = number/1024;
-            measure = "KB";
-            if(number>=1024){
-                number = number/1024;
-                measure = "MB";
-                if(number>=1024){
-                    number=number/1024;
-                    measure = "GB";
+        if (number >= 1024) {
+            number = number / 1024;
+            measure = "KiB";
+            if (number >= 1024) {
+                number = number / 1024;
+                measure = "MiB";
+                if (number >= 1024) {
+                    number = number / 1024;
+                    measure = "GiB";
+                    if (number >= 1024) {
+                        number = number / 1024;
+                        measure = "TiB";
+                    }
                 }
             }
         }
@@ -2265,13 +2456,22 @@ public class Functions {
      * Advertises the minimum set of HTTP headers that assist programmatic
      * discovery of Jenkins.
      */
+    @SuppressFBWarnings(value = "UC_USELESS_VOID_METHOD", justification = "TODO needs triage")
     public static void advertiseHeaders(HttpServletResponse rsp) {
         Jenkins j = Jenkins.getInstanceOrNull();
-        if (j!=null) {
-            rsp.setHeader("X-Hudson","1.395");
+        if (j != null) {
+            rsp.setHeader("X-Hudson", "1.395");
             rsp.setHeader("X-Jenkins", Jenkins.VERSION);
             rsp.setHeader("X-Jenkins-Session", Jenkins.SESSION_HASH);
         }
+    }
+
+    /**
+     * @deprecated use {@link #advertiseHeaders(HttpServletResponse)}
+     */
+    @Deprecated
+    public static void advertiseHeaders(javax.servlet.http.HttpServletResponse rsp) {
+        advertiseHeaders(HttpServletResponseWrapper.toJakartaHttpServletResponse(rsp));
     }
 
     @Restricted(NoExternalUse.class) // for actions.jelly and ContextMenu.add
@@ -2281,5 +2481,138 @@ public class Functions {
         } else {
             return true;
         }
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static Icon tryGetIcon(String iconGuess) {
+        // Jenkins Symbols don't have metadata so return null
+        if (iconGuess == null || iconGuess.startsWith("symbol-")) {
+            return null;
+        }
+
+        Icon iconMetadata = IconSet.icons.getIconByClassSpec(iconGuess);
+
+        // `iconGuess` must be class names if it contains a whitespace.
+        //  It may contains extra css classes unrelated to icons.
+        // Filter classes with `icon-` prefix.
+        if (iconMetadata == null && iconGuess.contains(" ")) {
+            iconMetadata = IconSet.icons.getIconByClassSpec(filterIconNameClasses(iconGuess));
+        }
+
+        if (iconMetadata == null) {
+            // Icon could be provided as a simple iconFileName e.g. "help.svg"
+            iconMetadata = IconSet.icons.getIconByClassSpec(IconSet.toNormalizedIconNameClass(iconGuess) + " icon-md");
+        }
+
+        if (iconMetadata == null) {
+            // Icon could be provided as an absolute iconFileName e.g. "/plugin/foo/abc.png"
+            iconMetadata = IconSet.icons.getIconByUrl(iconGuess);
+        }
+
+        return iconMetadata;
+    }
+
+    private static @NonNull String filterIconNameClasses(@NonNull String classNames) {
+        return Arrays.stream(classNames.split(" "))
+            .filter(className -> className.startsWith("icon-"))
+            .collect(Collectors.joining(" "));
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static String extractPluginNameFromIconSrc(String iconSrc) {
+        if (iconSrc == null) {
+            return "";
+        }
+
+        if (!iconSrc.contains("plugin-")) {
+            return "";
+        }
+
+        String[] arr = iconSrc.split(" ");
+        for (String element : arr) {
+            if (element.startsWith("plugin-")) {
+                return element.replaceFirst("plugin-", "");
+            }
+        }
+
+        return "";
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static String tryGetIconPath(String iconGuess, JellyContext context) {
+        if (iconGuess == null) {
+            return null;
+        }
+
+        if (iconGuess.startsWith("symbol-")) {
+            return iconGuess;
+        }
+
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        String rootURL = currentRequest.getContextPath();
+        Icon iconMetadata = tryGetIcon(iconGuess);
+
+        String iconSource;
+        if (iconMetadata != null) {
+            iconSource = IconSet.tryTranslateTangoIconToSymbol(iconMetadata.getClassSpec(), () -> iconMetadata.getQualifiedUrl(context));
+        } else {
+            iconSource = guessIcon(iconGuess, rootURL);
+        }
+        return iconSource;
+    }
+
+    static String guessIcon(String iconGuess, String rootURL) {
+        String iconSource;
+        //noinspection HttpUrlsUsage
+        if (iconGuess.startsWith("http://") || iconGuess.startsWith("https://")) {
+            iconSource = iconGuess;
+        } else {
+            if (!iconGuess.startsWith("/")) {
+                iconGuess = "/" + iconGuess;
+            }
+            if (iconGuess.startsWith(rootURL)) {
+                if ((!rootURL.equals("/images") && !rootURL.equals("/plugin")) || iconGuess.startsWith(rootURL + rootURL)) {
+                    iconGuess = iconGuess.substring(rootURL.length());
+                }
+            }
+            iconSource = rootURL + (iconGuess.startsWith("/images/") || iconGuess.startsWith("/plugin/") ? getResourcePath() : "") + iconGuess;
+        }
+        return iconSource;
+    }
+
+    @SuppressFBWarnings(value = "PREDICTABLE_RANDOM", justification = "True randomness isn't necessary for form item IDs")
+    @Restricted(NoExternalUse.class)
+    public static String generateItemId() {
+        return String.valueOf(Math.floor(Math.random() * 3000));
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static ExtensionList<SearchFactory> getSearchFactories() {
+        return SearchFactory.all();
+    }
+
+    /**
+     * @param keyboardShortcut the shortcut to be translated
+     * @return the translated shortcut, e.g. CMD+K to ⌘+K for macOS, CTRL+K for Windows
+     */
+    @Restricted(NoExternalUse.class)
+    public static String translateModifierKeysForUsersPlatform(String keyboardShortcut) {
+        StaplerRequest2 currentRequest = Stapler.getCurrentRequest2();
+        currentRequest.getWebApp().getDispatchValidator().allowDispatch(currentRequest, Stapler.getCurrentResponse2());
+        String userAgent = currentRequest.getHeader("User-Agent");
+
+        List<String> platformsThatUseCommand = List.of("MAC", "IPHONE", "IPAD");
+        boolean useCmdKey = platformsThatUseCommand.stream().anyMatch(e -> userAgent.toUpperCase().contains(e));
+
+        return keyboardShortcut.replace("CMD", useCmdKey ? "⌘" : "CTRL");
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static String formatMessage(String format, Object args) {
+        if (format == null) {
+            return args.toString();
+        }
+
+        return MessageFormat.format(format, args);
     }
 }
