@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi, Jean-Baptiste Quenot, Tom Huybrechts
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson;
 
 import static java.util.logging.Level.FINE;
@@ -29,7 +30,6 @@ import static java.util.logging.Level.WARNING;
 
 import com.thoughtworks.xstream.converters.reflection.PureJavaReflectionProvider;
 import com.thoughtworks.xstream.core.JVM;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.model.Hudson;
 import hudson.security.ACL;
 import hudson.security.ACLContext;
@@ -45,11 +45,19 @@ import hudson.util.InsufficientPermissionDetected;
 import hudson.util.NoHomeDir;
 import hudson.util.NoTempDir;
 import hudson.util.RingBufferLogHandler;
+import io.jenkins.servlet.ServletContextEventWrapper;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletContextEvent;
+import jakarta.servlet.ServletContextListener;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.SessionTrackingMode;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.StandardOpenOption;
@@ -63,16 +71,6 @@ import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import java.util.logging.Logger;
-import javax.naming.Context;
-import javax.naming.InitialContext;
-import javax.naming.NamingException;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletContextEvent;
-import javax.servlet.ServletContextListener;
-import javax.servlet.ServletResponse;
-import javax.servlet.SessionTrackingMode;
-import javax.xml.transform.TransformerFactory;
-import javax.xml.transform.TransformerFactoryConfigurationError;
 import jenkins.model.Jenkins;
 import jenkins.util.JenkinsJVM;
 import jenkins.util.SystemProperties;
@@ -101,7 +99,7 @@ public class WebAppMain implements ServletContextListener {
      * <p>
      * The SecurityRealm should be corrected but this is a hardening in Jenkins core.
      * <p>
-     * As this property is read during startup, you will not be able to change it at runtime 
+     * As this property is read during startup, you will not be able to change it at runtime
      * depending on your application server (not possible with Jetty nor Tomcat)
      * <p>
      * When running hpi:run, the default tracking is COOKIE+URL.
@@ -112,7 +110,7 @@ public class WebAppMain implements ServletContextListener {
     public static final String FORCE_SESSION_TRACKING_BY_COOKIE_PROP = WebAppMain.class.getName() + ".forceSessionTrackingByCookie";
 
     private final RingBufferLogHandler handler = new RingBufferLogHandler(WebAppMain.getDefaultRingBufferSize()) {
-      
+
         @Override public synchronized void publish(LogRecord record) {
             if (record.getLevel().intValue() >= Level.INFO.intValue()) {
                 super.publish(record);
@@ -144,10 +142,10 @@ public class WebAppMain implements ServletContextListener {
         // Nicer console log formatting when using mvn jetty:run.
         if (Main.isDevelopmentMode && System.getProperty("java.util.logging.config.file") == null) {
             try {
-                Formatter formatter = (Formatter) Class.forName("io.jenkins.lib.support_log_formatter.SupportLogFormatter").newInstance();
-                for (Handler h : java.util.logging.Logger.getLogger("").getHandlers()) {
+                Formatter formatter = (Formatter) Class.forName("io.jenkins.lib.support_log_formatter.SupportLogFormatter").getDeclaredConstructor().newInstance();
+                for (Handler h : Logger.getLogger("").getHandlers()) {
                     if (h instanceof ConsoleHandler) {
-                        ((ConsoleHandler) h).setFormatter(formatter);
+                        h.setFormatter(formatter);
                     }
                 }
             } catch (ClassNotFoundException x) {
@@ -159,7 +157,7 @@ public class WebAppMain implements ServletContextListener {
 
         JenkinsJVMAccess._setJenkinsJVM(true);
         final ServletContext context = event.getServletContext();
-        File home=null;
+        File home = null;
         try {
 
             // use the current request to determine the language
@@ -174,12 +172,12 @@ public class WebAppMain implements ServletContextListener {
             JVM jvm;
             try {
                 jvm = new JVM();
-                new URLClassLoader(new URL[0],getClass().getClassLoader());
-            } catch(SecurityException e) {
+                new URLClassLoader(new URL[0], getClass().getClassLoader());
+            } catch (SecurityException e) {
                 throw new InsufficientPermissionDetected(e);
             }
 
-            try {// remove Sun PKCS11 provider if present. See http://wiki.jenkins-ci.org/display/JENKINS/Solaris+Issue+6276483
+            try { // remove Sun PKCS11 provider if present. See http://wiki.jenkins-ci.org/display/JENKINS/Solaris+Issue+6276483
                 Security.removeProvider("SunPKCS11-Solaris");
             } catch (SecurityException e) {
                 // ignore this error.
@@ -189,36 +187,36 @@ public class WebAppMain implements ServletContextListener {
 
             final FileAndDescription describedHomeDir = getHomeDir(event);
             home = describedHomeDir.file.getAbsoluteFile();
-            home.mkdirs();
-            LOGGER.info("Jenkins home directory: "+ home +" found at: " + describedHomeDir.description);
-
-            // check that home exists (as mkdirs could have failed silently), otherwise throw a meaningful error
-            if (!home.exists())
-                throw new NoHomeDir(home);
+            try {
+                Util.createDirectories(home.toPath());
+            } catch (IOException | InvalidPathException e) {
+                throw (NoHomeDir) new NoHomeDir(home).initCause(e);
+            }
+            LOGGER.info("Jenkins home directory: " + home + " found at: " + describedHomeDir.description);
 
             recordBootAttempt(home);
 
             // make sure that we are using XStream in the "enhanced" (JVM-specific) mode
-            if(jvm.bestReflectionProvider().getClass()==PureJavaReflectionProvider.class) {
+            if (jvm.bestReflectionProvider().getClass() == PureJavaReflectionProvider.class) {
                 throw new IncompatibleVMDetected(); // nope
             }
 
             // make sure this is servlet 2.4 container or above
             try {
-                ServletResponse.class.getMethod("setCharacterEncoding",String.class);
+                ServletResponse.class.getMethod("setCharacterEncoding", String.class);
             } catch (NoSuchMethodException e) {
-                throw (IncompatibleServletVersionDetected)new IncompatibleServletVersionDetected(ServletResponse.class).initCause(e);
+                throw (IncompatibleServletVersionDetected) new IncompatibleServletVersionDetected(ServletResponse.class).initCause(e);
             }
 
             // make sure that we see Ant 1.7
             try {
                 FileSet.class.getMethod("getDirectoryScanner");
             } catch (NoSuchMethodException e) {
-                throw (IncompatibleAntVersionDetected)new IncompatibleAntVersionDetected(FileSet.class).initCause(e);
+                throw (IncompatibleAntVersionDetected) new IncompatibleAntVersionDetected(FileSet.class).initCause(e);
             }
 
             // make sure AWT is functioning, or else JFreeChart won't even load.
-            if(ChartUtil.awtProblemCause!=null) {
+            if (ChartUtil.awtProblemCause != null) {
                 throw new AWTProblem(ChartUtil.awtProblemCause);
             }
 
@@ -235,33 +233,15 @@ public class WebAppMain implements ServletContextListener {
                 throw new NoTempDir(e);
             }
 
-            // Tomcat breaks XSLT with JDK 5.0 and onward. Check if that's the case, and if so,
-            // try to correct it
-            try {
-                TransformerFactory.newInstance();
-                // if this works we are all happy
-            } catch (TransformerFactoryConfigurationError x) {
-                // no it didn't.
-                LOGGER.log(WARNING, "XSLT not configured correctly. Hudson will try to fix this. See https://bz.apache.org/bugzilla/show_bug.cgi?id=40895 for more details",x);
-                System.setProperty(TransformerFactory.class.getName(),"com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl");
-                try {
-                    TransformerFactory.newInstance();
-                    LOGGER.info("XSLT is set to the JAXP RI in JRE");
-                } catch(TransformerFactoryConfigurationError y) {
-                    LOGGER.log(SEVERE, "Failed to correct the problem.");
-                }
-            }
-
             installExpressionFactory(event);
 
-            context.setAttribute(APP,new HudsonIsLoading());
+            context.setAttribute(APP, new HudsonIsLoading());
             if (SystemProperties.getBoolean(FORCE_SESSION_TRACKING_BY_COOKIE_PROP, true)) {
                 context.setSessionTrackingModes(EnumSet.of(SessionTrackingMode.COOKIE));
             }
 
             final File _home = home;
             initThread = new Thread("Jenkins initialization thread") {
-                @SuppressFBWarnings(value = "RV_RETURN_VALUE_IGNORED_BAD_PRACTICE", justification = "TODO needs triage")
                 @Override
                 public void run() {
                     boolean success = false;
@@ -274,28 +254,51 @@ public class WebAppMain implements ServletContextListener {
 
                         context.setAttribute(APP, instance);
 
-                        BootFailure.getBootFailureFile(_home).delete();
+                        Files.deleteIfExists(BootFailure.getBootFailureFile(_home).toPath());
 
                         // at this point we are open for business and serving requests normally
-                        LOGGER.info("Jenkins is fully up and running");
+                        Jenkins.get().getLifecycle().onReady();
                         success = true;
                     } catch (Error e) {
-                        new HudsonFailedToLoad(e).publish(context,_home);
+                        new HudsonFailedToLoad(e).publish(context, _home);
                         throw e;
                     } catch (Exception e) {
-                        new HudsonFailedToLoad(e).publish(context,_home);
+                        // Allow plugins to override error page on boot with custom BootFailure subclass thrown
+                        Throwable error = unwrapException(e);
+                        if (error instanceof InvocationTargetException) {
+                            Throwable targetException = ((InvocationTargetException) error).getTargetException();
+
+                            if (targetException instanceof BootFailure) {
+                                ((BootFailure) targetException).publish(context, _home);
+                            } else {
+                                new HudsonFailedToLoad(e).publish(context, _home);
+                            }
+                        } else {
+                            new HudsonFailedToLoad(e).publish(context, _home);
+                        }
                     } finally {
                         Jenkins instance = Jenkins.getInstanceOrNull();
-                        if(!success && instance!=null)
+                        if (!success && instance != null)
                             instance.cleanUp();
                     }
+                }
+
+                private Throwable unwrapException(Exception e) {
+                    Throwable error = e;
+                    while (error.getCause() != null) {
+                        if (error.getCause() instanceof InvocationTargetException) {
+                            return error.getCause();
+                        }
+                        error = error.getCause();
+                    }
+                    return error;
                 }
             };
             initThread.start();
         } catch (BootFailure e) {
             e.publish(context, home);
         } catch (Error | RuntimeException e) {
-            LOGGER.log(SEVERE, "Failed to initialize Jenkins",e);
+            LOGGER.log(SEVERE, "Failed to initialize Jenkins", e);
             throw e;
         }
     }
@@ -311,21 +314,31 @@ public class WebAppMain implements ServletContextListener {
      * @see BootFailure
      */
     private void recordBootAttempt(File home) {
-        try (OutputStream o=Files.newOutputStream(BootFailure.getBootFailureFile(home).toPath(), StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
-            o.write((new Date() + System.getProperty("line.separator", "\n")).getBytes());
+        try (OutputStream o = Files.newOutputStream(BootFailure.getBootFailureFile(home).toPath(), StandardOpenOption.CREATE, StandardOpenOption.APPEND)) {
+            o.write((new Date() + System.getProperty("line.separator", "\n")).getBytes(Charset.defaultCharset()));
         } catch (IOException | InvalidPathException e) {
-            LOGGER.log(WARNING, "Failed to record boot attempts",e);
+            LOGGER.log(WARNING, "Failed to record boot attempts", e);
         }
     }
 
+    /**
+     * @since 2.475
+     */
     public static void installExpressionFactory(ServletContextEvent event) {
         JellyFacet.setExpressionFactory(event, new ExpressionFactory2());
     }
 
-	/**
+    /**
+     * @deprecated use {@link #installExpressionFactory(ServletContextEvent)}
+     */
+    @Deprecated
+    public static void installExpressionFactory(javax.servlet.ServletContextEvent event) {
+        installExpressionFactory(ServletContextEventWrapper.toJakartaServletContextEvent(event));
+    }
+
+    /**
      * Installs log handler to monitor all Hudson logs.
      */
-    @SuppressFBWarnings(value = "LG_LOST_LOGGER_DUE_TO_WEAK_REFERENCE", justification = "TODO needs triage")
     private void installLogger() {
         Jenkins.logRecords = handler.getView();
         Logger.getLogger("").addHandler(handler);
@@ -335,7 +348,8 @@ public class WebAppMain implements ServletContextListener {
     public static class FileAndDescription {
         public final File file;
         public final String description;
-        public FileAndDescription(File file,String description) {
+
+        public FileAndDescription(File file, String description) {
             this.file = file;
             this.description = description;
         }
@@ -344,67 +358,47 @@ public class WebAppMain implements ServletContextListener {
     /**
      * Determines the home directory for Jenkins.
      *
-     * <p>
-     * We look for a setting that affects the smallest scope first, then bigger ones later.
+     * <p>We look for a setting that affects the smallest scope first, then bigger ones later.
      *
-     * <p>
-     * People makes configuration mistakes, so we are trying to be nice
+     * <p>People make configuration mistakes, so we are trying to be nice
      * with those by doing {@link String#trim()}.
-     * 
-     * <p>
+     *
      * @return the File alongside with some description to help the user troubleshoot issues
      */
     public FileAndDescription getHomeDir(ServletContextEvent event) {
-        // check JNDI for the home directory first
-        for (String name : HOME_NAMES) {
-            try {
-                InitialContext iniCtxt = new InitialContext();
-                Context env = (Context) iniCtxt.lookup("java:comp/env");
-                String value = (String) env.lookup(name);
-                if(value!=null && value.trim().length()>0)
-                    return new FileAndDescription(new File(value.trim()),"JNDI/java:comp/env/"+name);
-                // look at one more place. See issue JENKINS-1314
-                value = (String) iniCtxt.lookup(name);
-                if(value!=null && value.trim().length()>0)
-                    return new FileAndDescription(new File(value.trim()),"JNDI/"+name);
-            } catch (NamingException e) {
-                // ignore
-            }
-        }
-
-        // next the system property
+        // check the system property for the home directory first
         for (String name : HOME_NAMES) {
             String sysProp = SystemProperties.getString(name);
-            if(sysProp!=null)
-                return new FileAndDescription(new File(sysProp.trim()),"SystemProperties.getProperty(\""+name+"\")");
+            if (sysProp != null)
+                return new FileAndDescription(new File(sysProp.trim()), "SystemProperties.getProperty(\"" + name + "\")");
         }
 
         // look at the env var next
         for (String name : HOME_NAMES) {
             String env = EnvVars.masterEnvVars.get(name);
-            if(env!=null)
-                return new FileAndDescription(new File(env.trim()).getAbsoluteFile(),"EnvVars.masterEnvVars.get(\""+name+"\")");
+            if (env != null)
+                return new FileAndDescription(new File(env.trim()).getAbsoluteFile(), "EnvVars.masterEnvVars.get(\"" + name + "\")");
         }
 
         // otherwise pick a place by ourselves
 
         String root = event.getServletContext().getRealPath("/WEB-INF/workspace");
-        if(root!=null) {
+        if (root != null) {
             File ws = new File(root.trim());
-            if(ws.exists())
+            if (ws.exists())
                 // Hudson <1.42 used to prefer this before ~/.hudson, so
                 // check the existence and if it's there, use it.
                 // otherwise if this is a new installation, prefer ~/.hudson
-                return new FileAndDescription(ws,"getServletContext().getRealPath(\"/WEB-INF/workspace\")");
+                return new FileAndDescription(ws, "getServletContext().getRealPath(\"/WEB-INF/workspace\")");
         }
 
-        File legacyHome = new File(new File(System.getProperty("user.home")),".hudson");
+        File legacyHome = new File(new File(System.getProperty("user.home")), ".hudson");
         if (legacyHome.exists()) {
-            return new FileAndDescription(legacyHome,"$user.home/.hudson"); // before rename, this is where it was stored
+            return new FileAndDescription(legacyHome, "$user.home/.hudson"); // before rename, this is where it was stored
         }
 
-        File newHome = new File(new File(System.getProperty("user.home")),".jenkins");
-        return new FileAndDescription(newHome,"$user.home/.jenkins");
+        File newHome = new File(new File(System.getProperty("user.home")), ".jenkins");
+        return new FileAndDescription(newHome, "$user.home/.jenkins");
     }
 
     @Override
@@ -415,7 +409,7 @@ public class WebAppMain implements ServletContextListener {
                 if (instance != null) {
                     instance.cleanUp();
                 }
-            } catch (Exception e) {
+            } catch (Throwable e) {
                 LOGGER.log(Level.SEVERE, "Failed to clean up. Restart will continue.", e);
             }
 
@@ -442,5 +436,5 @@ public class WebAppMain implements ServletContextListener {
         }
     }
 
-    private static final String[] HOME_NAMES = {"JENKINS_HOME","HUDSON_HOME"};
+    private static final String[] HOME_NAMES = {"JENKINS_HOME", "HUDSON_HOME"};
 }
