@@ -22,9 +22,11 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
 import static hudson.init.InitMilestone.JOB_CONFIG_ADAPTED;
+import static hudson.model.Item.CANCEL;
 import static hudson.util.Iterators.reverse;
 
 import com.google.common.annotations.VisibleForTesting;
@@ -74,10 +76,15 @@ import hudson.triggers.SafeTimerTask;
 import hudson.util.ConsistentHash;
 import hudson.util.Futures;
 import hudson.util.XStream2;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.nio.channels.ClosedByInterruptException;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -97,17 +104,17 @@ import java.util.TreeSet;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletResponse;
+import jenkins.console.WithConsoleUrl;
 import jenkins.model.Jenkins;
 import jenkins.model.queue.AsynchronousExecution;
 import jenkins.model.queue.CompositeCauseOfBlockage;
+import jenkins.model.queue.QueueIdStrategy;
+import jenkins.model.queue.QueueItem;
 import jenkins.security.QueueItemAuthenticator;
 import jenkins.security.QueueItemAuthenticatorProvider;
 import jenkins.security.stapler.StaplerAccessibleType;
@@ -118,11 +125,13 @@ import jenkins.util.Timer;
 import net.jcip.annotations.GuardedBy;
 import org.jenkinsci.remoting.RoleChecker;
 import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.Beta;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.HttpResponse;
 import org.kohsuke.stapler.HttpResponses;
 import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.export.Exported;
 import org.kohsuke.stapler.export.ExportedBean;
 import org.kohsuke.stapler.interceptor.RequirePOST;
@@ -208,7 +217,7 @@ public class Queue extends ResourceController implements Saveable {
      *
      * This map is forgetful, since we can't remember everything that executed in the past.
      */
-    private final Cache<Long,LeftItem> leftItems = CacheBuilder.newBuilder().expireAfterWrite(5*60, TimeUnit.SECONDS).build();
+    private final Cache<Long, LeftItem> leftItems = CacheBuilder.newBuilder().expireAfterWrite(5 * 60, TimeUnit.SECONDS).build();
 
     /**
      * Data structure created for each idle {@link Executor}.
@@ -312,7 +321,7 @@ public class Queue extends ResourceController implements Saveable {
 
         @Override
         public String toString() {
-            return String.format("JobOffer[%s #%d]",executor.getOwner().getName(), executor.getNumber());
+            return String.format("JobOffer[%s #%d]", executor.getOwner().getName(), executor.getNumber());
         }
     }
 
@@ -320,7 +329,7 @@ public class Queue extends ResourceController implements Saveable {
 
     private transient volatile QueueSorter sorter;
 
-    private final transient AtmostOneTaskExecutor<Void> maintainerThread = new AtmostOneTaskExecutor<>(new Callable<Void>() {
+    private final transient AtmostOneTaskExecutor<Void> maintainerThread = new AtmostOneTaskExecutor<>(new Callable<>() {
         @Override
         public Void call() throws Exception {
             maintain();
@@ -363,9 +372,20 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * Simple queue state persistence object.
      */
-    static class State {
-        public long counter;
-        public List<Item> items = new ArrayList<>();
+    @Restricted(Beta.class)
+    public static final class State {
+        public /* almost final */ List<Item> items = new ArrayList<>();
+        public /* almost final */ Map<String, Object> properties = new HashMap<>();
+
+        private Object readResolve() {
+            if (items == null) {
+                items = new ArrayList<>();
+            }
+            if (properties == null) {
+                properties = new HashMap<>();
+            }
+            return this;
+        }
     }
 
     /**
@@ -381,32 +401,29 @@ public class Queue extends ResourceController implements Saveable {
             pendings.clear();
 
             File queueFile = getXMLQueueFile();
-            if (queueFile.exists()) {
+            if (Files.exists(queueFile.toPath())) {
                 Object unmarshaledObj = new XmlFile(XSTREAM, queueFile).read();
                 List items;
 
+                State state;
                 if (unmarshaledObj instanceof State) {
-                    State state = (State) unmarshaledObj;
+                    state = (State) unmarshaledObj;
                     items = state.items;
-                    WaitingItem.COUNTER.set(state.counter);
                 } else {
                     // backward compatibility - it's an old List queue.xml
                     items = (List) unmarshaledObj;
-                    long maxId = 0;
-                    for (Object o : items) {
-                        if (o instanceof Item) {
-                            maxId = Math.max(maxId, ((Item)o).id);
-                        }
-                    }
-                    WaitingItem.COUNTER.set(maxId);
+                    state = new State();
+                    state.items.addAll(items);
                 }
+                QueueIdStrategy.get().load(state);
+
 
                 for (Object o : items) {
                     if (o instanceof Task) {
                         // backward compatibility
-                        schedule((Task)o, 0);
+                        schedule((Task) o, 0);
                     } else if (o instanceof Item) {
-                        Item item = (Item)o;
+                        Item item = (Item) o;
 
                         if (item.task == null) {
                             continue;   // botched persistence. throw this one away
@@ -430,11 +447,9 @@ public class Queue extends ResourceController implements Saveable {
                 // I don't know how this problem happened, but to diagnose this problem better
                 // when it happens again, save the old queue file for introspection.
                 File bk = new File(queueFile.getPath() + ".bak");
-                bk.delete();
-                queueFile.renameTo(bk);
-                queueFile.delete();
+                Files.move(queueFile.toPath(), bk.toPath(), StandardCopyOption.REPLACE_EXISTING);
             }
-        } catch (IOException e) {
+        } catch (IOException | InvalidPathException e) {
             LOGGER.log(Level.WARNING, "Failed to load the queue file " + getXMLQueueFile(), e);
         } finally { updateSnapshot(); } } finally {
             lock.unlock();
@@ -446,7 +461,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Override
     public void save() {
-        if(BulkChange.contains(this))  return;
+        if (BulkChange.contains(this))  return;
         if (Jenkins.getInstanceOrNull() == null) {
             return;
         }
@@ -456,11 +471,10 @@ public class Queue extends ResourceController implements Saveable {
         try {
             // write out the queue state we want to save
             State state = new State();
-            state.counter = WaitingItem.COUNTER.longValue();
-
+            QueueIdStrategy.get().persist(state);
             // write out the tasks on the queue
-            for (Item item: getItems()) {
-                if(item.task instanceof TransientTask)  continue;
+            for (Item item : getItems()) {
+                if (item.task instanceof TransientTask)  continue;
                 state.items.add(item);
             }
 
@@ -495,6 +509,10 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /*package*/ File getXMLQueueFile() {
+        String id = SystemProperties.getString(Queue.class.getName() + ".id");
+        if (id != null) {
+            return new File(Jenkins.get().getRootDir(), "queue/" + id + ".xml");
+        }
         return new File(Jenkins.get().getRootDir(), "queue.xml");
     }
 
@@ -504,7 +522,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(AbstractProject p) {
-        return schedule(p)!=null;
+        return schedule(p) != null;
     }
 
     /**
@@ -527,7 +545,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(AbstractProject p, int quietPeriod) {
-        return schedule(p, quietPeriod)!=null;
+        return schedule(p, quietPeriod) != null;
     }
 
     /**
@@ -664,7 +682,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(Task p, int quietPeriod) {
-        return schedule(p, quietPeriod)!=null;
+        return schedule(p, quietPeriod) != null;
     }
 
     public @CheckForNull WaitingItem schedule(Task p, int quietPeriod) {
@@ -677,7 +695,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(Task p, int quietPeriod, Action... actions) {
-        return schedule(p, quietPeriod, actions)!=null;
+        return schedule(p, quietPeriod, actions) != null;
     }
 
     /**
@@ -744,8 +762,8 @@ public class Queue extends ResourceController implements Saveable {
             item = null;
         }
         if (item != null) {
-            if(item.hasCancelPermission()){
-                if(cancel(item)) {
+            if (item.hasCancelPermission()) {
+                if (cancel(item)) {
                     return HttpResponses.status(HttpServletResponse.SC_NO_CONTENT);
                 }
                 return HttpResponses.error(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, "Could not cancel run for id " + id);
@@ -771,15 +789,15 @@ public class Queue extends ResourceController implements Saveable {
      * Generally speaking the array is sorted such that the items that are most likely built sooner are
      * at the end.
      */
-    @Exported(inline=true)
+    @Exported(inline = true)
     public Item[] getItems() {
         Snapshot s = this.snapshot;
         List<Item> r = new ArrayList<>();
 
-        for(WaitingItem p : s.waitingList) {
+        for (WaitingItem p : s.waitingList) {
             r = checkPermissionsAndAddToList(r, p);
         }
-        for (BlockedItem p : s.blockedProjects){
+        for (BlockedItem p : s.blockedProjects) {
             r = checkPermissionsAndAddToList(r, p);
         }
         for (BuildableItem p : reverse(s.buildables)) {
@@ -824,15 +842,15 @@ public class Queue extends ResourceController implements Saveable {
      * at the end.
      */
     @Restricted(NoExternalUse.class)
-    @Exported(inline=true)
+    @Exported(inline = true)
     public StubItem[] getDiscoverableItems() {
         Snapshot s = this.snapshot;
         List<StubItem> r = new ArrayList<>();
 
-        for(WaitingItem p : s.waitingList) {
+        for (WaitingItem p : s.waitingList) {
             r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
-        for (BlockedItem p : s.blockedProjects){
+        for (BlockedItem p : s.blockedProjects) {
             r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
         for (BuildableItem p : reverse(s.buildables)) {
@@ -849,7 +867,7 @@ public class Queue extends ResourceController implements Saveable {
     private List<StubItem> filterDiscoverableItemListBasedOnPermissions(List<StubItem> r, Item t) {
         if (t.task instanceof hudson.model.Item) {
             hudson.model.Item taskAsItem = (hudson.model.Item) t.task;
-            if (!taskAsItem.hasPermission(hudson.model.Item.READ) 
+            if (!taskAsItem.hasPermission(hudson.model.Item.READ)
                     && taskAsItem.hasPermission(hudson.model.Item.DISCOVER)) {
                 r.add(new StubItem(new StubTask(t.task)));
             }
@@ -946,7 +964,7 @@ public class Queue extends ResourceController implements Saveable {
     protected List<BlockedItem> getBlockedItems() {
         return new ArrayList<>(snapshot.blockedProjects);
     }
-    
+
     /**
      * Returns the snapshot of all {@link LeftItem}s.
      *
@@ -1009,7 +1027,7 @@ public class Queue extends ResourceController implements Saveable {
      * @param l Label to be checked. If null, any label will be accepted.
      *    If you want to count {@link BuildableItem}s without assigned labels,
      *    use {@link #strictCountBuildableItemsFor(hudson.model.Label)}.
-     * @return Number of {@link BuildableItem}s for the specified label. 
+     * @return Number of {@link BuildableItem}s for the specified label.
      */
     public /* @java.annotation.Nonnegative */ int countBuildableItemsFor(@CheckForNull Label l) {
         Snapshot snapshot = this.snapshot;
@@ -1024,7 +1042,7 @@ public class Queue extends ResourceController implements Saveable {
                     r++;
         return r;
     }
-    
+
     /**
      * How many {@link BuildableItem}s are assigned for the given label?
      * <p>
@@ -1148,7 +1166,7 @@ public class Queue extends ResourceController implements Saveable {
      * Returns true if this queue contains the said project.
      */
     public boolean contains(Task t) {
-        return getItem(t)!=null;
+        return getItem(t) != null;
     }
 
     /**
@@ -1208,7 +1226,7 @@ public class Queue extends ResourceController implements Saveable {
                 return causeOfBlockage;
         }
 
-        if(!(i instanceof BuildableItem)) {
+        if (!(i instanceof BuildableItem)) {
             // Make sure we don't queue two tasks of the same project to be built
             // unless that project allows concurrent builds. Once item is buildable it's ok.
             //
@@ -1330,11 +1348,12 @@ public class Queue extends ResourceController implements Saveable {
         }
     }
     /**
-     * Wraps a {@link Runnable} with the  {@link Queue} lock held. 
+     * Wraps a {@link Runnable} with the  {@link Queue} lock held.
      *
      * @param runnable the operation to wrap.
      * @since 1.618
      */
+
     public static Runnable wrapWithLock(Runnable runnable) {
         final Jenkins jenkins = Jenkins.getInstanceOrNull();
         // TODO confirm safe to assume non-null and use getInstance()
@@ -1343,7 +1362,7 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /**
-     * Wraps a {@link hudson.remoting.Callable} with the  {@link Queue} lock held. 
+     * Wraps a {@link hudson.remoting.Callable} with the  {@link Queue} lock held.
      *
      * @param callable the operation to wrap.
      * @since 1.618
@@ -1356,7 +1375,7 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /**
-     * Wraps a {@link java.util.concurrent.Callable} with the {@link Queue} lock held. 
+     * Wraps a {@link java.util.concurrent.Callable} with the {@link Queue} lock held.
      *
      * @param callable the operation to wrap.
      * @since 1.618
@@ -1369,6 +1388,7 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     @Override
+    @SuppressFBWarnings(value = "WA_AWAIT_NOT_IN_LOOP", justification = "the caller does indeed call this method in a loop")
     protected void _await() throws InterruptedException {
         condition.await();
     }
@@ -1480,7 +1500,7 @@ public class Queue extends ResourceController implements Saveable {
             // The executors that are currently waiting for a job to run.
             Map<Executor, JobOffer> parked = new HashMap<>();
 
-            {// update parked (and identify any pending items whose executor has disappeared)
+            { // update parked (and identify any pending items whose executor has disappeared)
                 List<BuildableItem> lostPendings = new ArrayList<>(pendings);
                 for (Computer c : jenkins.getComputers()) {
                     for (Executor e : c.getAllExecutors()) {
@@ -1505,7 +1525,7 @@ public class Queue extends ResourceController implements Saveable {
                     }
                 }
                 // pending -> buildable
-                for (BuildableItem p: lostPendings) {
+                for (BuildableItem p : lostPendings) {
                     if (LOGGER.isLoggable(Level.FINE)) {
                         LOGGER.log(Level.FINE,
                             "BuildableItem {0}: pending -> buildable as the assigned executor disappeared",
@@ -1519,7 +1539,7 @@ public class Queue extends ResourceController implements Saveable {
 
             final QueueSorter s = sorter;
 
-            {// blocked -> buildable
+            { // blocked -> buildable
                 // copy as we'll mutate the list and we want to process in a potentially different order
                 List<BlockedItem> blockedItems = new ArrayList<>(blockedProjects.values());
                 // if facing a cycle of blocked tasks, ensure we process in the desired sort order
@@ -1591,13 +1611,13 @@ public class Queue extends ResourceController implements Saveable {
                     LOGGER.log(Level.WARNING, "s.sortBuildableItems() threw Throwable: {0}", e);
                 }
             }
-            
+
             // Ensure that identification of blocked tasks is using the live state: JENKINS-27708 & JENKINS-27871
             updateSnapshot();
-            
+
             // allocate buildable jobs to executors
             for (BuildableItem p : new ArrayList<>(
-                    buildables)) {// copy as we'll mutate the list in the loop
+                    buildables)) { // copy as we'll mutate the list in the loop
                 // one last check to make sure this build is not blocked.
                 CauseOfBlockage causeOfBlockage = getCauseOfBlockageForItem(p);
                 if (causeOfBlockage != null) {
@@ -1699,7 +1719,7 @@ public class Queue extends ResourceController implements Saveable {
 
                 Runnable runnable = makeFlyWeightTaskBuildable(p);
                 LOGGER.log(Level.FINEST, "Converting flyweight task: {0} into a BuildableRunnable", taskDisplayName);
-                if(runnable != null){
+                if (runnable != null) {
                     return runnable;
                 }
 
@@ -1725,7 +1745,7 @@ public class Queue extends ResourceController implements Saveable {
      * @return a Runnable if there is an executor that can take the task, null otherwise
      */
     @CheckForNull
-    private Runnable makeFlyWeightTaskBuildable(final BuildableItem p){
+    private Runnable makeFlyWeightTaskBuildable(final BuildableItem p) {
         //we double check if this is a flyweight task
         if (p.task instanceof FlyweightTask) {
             Jenkins h = Jenkins.get();
@@ -1733,7 +1753,7 @@ public class Queue extends ResourceController implements Saveable {
             Label lbl = p.getAssignedLabel();
 
             Computer masterComputer = h.toComputer();
-            if (lbl != null && lbl.equals(h.getSelfLabel())) {
+            if (lbl != null && lbl.equals(h.getSelfLabel()) && masterComputer != null) {
                 // the flyweight task is bound to the master
                 if (h.canTake(p) == null) {
                     return createFlyWeightTaskRunnable(p, masterComputer);
@@ -1742,7 +1762,7 @@ public class Queue extends ResourceController implements Saveable {
                 }
             }
 
-            if (lbl == null && h.canTake(p) == null && masterComputer.isOnline() && masterComputer.isAcceptingTasks()) {
+            if (lbl == null && h.canTake(p) == null && masterComputer != null && masterComputer.isOnline() && masterComputer.isAcceptingTasks()) {
                 // The flyweight task is not tied to a specific label, so execute on master if possible.
                 // This will ensure that actual agent disconnects do not impact flyweight tasks randomly assigned to them.
                 return createFlyWeightTaskRunnable(p, masterComputer);
@@ -1763,7 +1783,7 @@ public class Queue extends ResourceController implements Saveable {
                 if (c == null || c.isOffline()) {
                     continue;
                 }
-                if (lbl!=null && !lbl.contains(n)) {
+                if (lbl != null && !lbl.contains(n)) {
                     continue;
                 }
                 if (n.canTake(p) != null) {
@@ -1776,7 +1796,7 @@ public class Queue extends ResourceController implements Saveable {
         return null;
     }
 
-    private Runnable createFlyWeightTaskRunnable(final BuildableItem p, final Computer c) {
+    private Runnable createFlyWeightTaskRunnable(final BuildableItem p, final @NonNull Computer c) {
         if (LOGGER.isLoggable(Level.FINEST)) {
             LOGGER.log(Level.FINEST, "Creating flyweight task {0} for computer {1}",
                     new Object[]{p.task.getFullDisplayName(), c.getName()});
@@ -1915,9 +1935,8 @@ public class Queue extends ResourceController implements Saveable {
          * amongst all the free executors on all possibly suitable nodes.
          * NOTE: To be able to re-use the same node during the next run this key should not change from one run to
          * another. You probably want to compute that key based on the job's name.
-         * <p>
-         * @return by default: {@link #getFullDisplayName()}
          *
+         * @return by default: {@link #getFullDisplayName()}
          * @see hudson.model.LoadBalancer
          */
         default String getAffinityKey() { return getFullDisplayName(); }
@@ -1926,25 +1945,16 @@ public class Queue extends ResourceController implements Saveable {
          * Checks the permission to see if the current user can abort this executable.
          * Returns normally from this method if it's OK.
          * <p>
-         * NOTE: If you have implemented {@link AccessControlled} this should just be
+         * NOTE: If you have implemented {@link AccessControlled} this defaults to
          * {@code checkPermission(hudson.model.Item.CANCEL);}
          *
          * @throws AccessDeniedException if the permission is not granted.
          */
-        void checkAbortPermission();
-
-        /**
-         * Works just like {@link #checkAbortPermission()} except it indicates the status by a return value,
-         * instead of exception.
-         * Also used by default for {@link hudson.model.Queue.Item#hasCancelPermission}.
-         * <p>
-         * NOTE: If you have implemented {@link AccessControlled} this should just be
-         * {@code return hasPermission(hudson.model.Item.CANCEL);}
-         *
-         * @return false
-         *      if the user doesn't have the permission.
-         */
-        boolean hasAbortPermission();
+        default void checkAbortPermission() {
+            if (this instanceof AccessControlled) {
+                ((AccessControlled) this).checkPermission(CANCEL);
+            }
+        }
 
         /**
          * Returns the URL of this task relative to the context root of the application.
@@ -1956,6 +1966,7 @@ public class Queue extends ResourceController implements Saveable {
          * @return
          *      URL that ends with '/'.
          */
+        @Override
         String getUrl();
 
         /**
@@ -1983,7 +1994,7 @@ public class Queue extends ResourceController implements Saveable {
          * @since 1.377
          */
         default Collection<? extends SubTask> getSubTasks() {
-            return Collections.singleton(this);
+            return Set.of(this);
         }
 
         /**
@@ -2061,7 +2072,7 @@ public class Queue extends ResourceController implements Saveable {
      * used to render the HTML that indicates this executable is executing.
      */
     @StaplerAccessibleType
-    public interface Executable extends Runnable {
+    public interface Executable extends Runnable, WithConsoleUrl {
         /**
          * Task from which this executable was created.
          *
@@ -2074,10 +2085,14 @@ public class Queue extends ResourceController implements Saveable {
 
         /**
          * An umbrella executable (such as a {@link Run}) of which this is one part.
-         * If {@link #getParent} has a distinct {@link SubTask#getOwnerTask},
-         * then it should be the case that {@code getParentExecutable().getParent() == getParent().getOwnerTask()}.
+         * Some invariants:
+         * <ul>
+         * <li>{@code getParent().getOwnerTask() == getParent() || getParentExecutable().getParent() == getParent().getOwnerTask()}
+         * <li>{@code getParent().getOwnerExecutable() == null || getParentExecutable() == getParent().getOwnerExecutable()}
+         * </ul>
          * @return a <em>distinct</em> executable (never {@code this}, unlike the default of {@link SubTask#getOwnerTask}!); or null if this executable was already at top level
          * @since 2.313, but implementations can already implement this with a lower core dependency.
+         * @see SubTask#getOwnerExecutable
          */
         default @CheckForNull Executable getParentExecutable() {
             return null;
@@ -2101,6 +2116,16 @@ public class Queue extends ResourceController implements Saveable {
         }
 
         /**
+         * Handles cases such as {@code PlaceholderExecutable} for Pipeline node steps.
+         * @return by default, that of {@link #getParentExecutable} if defined
+         */
+        @Override
+        default String getConsoleUrl() {
+            Executable parent = getParentExecutable();
+            return parent != null ? parent.getConsoleUrl() : null;
+        }
+
+        /**
          * Used to render the HTML. Should be a human readable text of what this executable is.
          */
         @Override String toString();
@@ -2110,7 +2135,7 @@ public class Queue extends ResourceController implements Saveable {
      * Item in a queue.
      */
     @ExportedBean(defaultVisibility = 999)
-    public abstract static class Item extends Actionable {
+    public abstract static class Item extends Actionable implements QueueItem {
 
         private final long id;
 
@@ -2121,6 +2146,7 @@ public class Queue extends ResourceController implements Saveable {
          * @since 1.601
          */
         @Exported
+        @Override
         public long getId() {
             return id;
         }
@@ -2140,11 +2166,18 @@ public class Queue extends ResourceController implements Saveable {
          * Project to be built.
          */
         @Exported
+        @NonNull
         public final Task task;
 
         private /*almost final*/ transient FutureImpl future;
 
         private final long inQueueSince;
+
+        @Override
+        @NonNull
+        public Task getTask() {
+            return task;
+        }
 
         /**
          * Build is blocked because another build is in progress,
@@ -2166,6 +2199,7 @@ public class Queue extends ResourceController implements Saveable {
          * True if the item is starving for an executor for too long.
          */
         @Exported
+        @Override
         public boolean isStuck() { return false; }
 
         /**
@@ -2181,6 +2215,7 @@ public class Queue extends ResourceController implements Saveable {
          * Returns a human readable presentation of how long this item is already in the queue.
          * E.g. something like '3 minutes 40 seconds'
          */
+        @Override
         public String getInQueueForString() {
             long duration = System.currentTimeMillis() - this.inQueueSince;
             return Util.getTimeSpanString(duration);
@@ -2206,7 +2241,7 @@ public class Queue extends ResourceController implements Saveable {
         public Label getAssignedLabel() {
             for (LabelAssignmentAction laa : getActions(LabelAssignmentAction.class)) {
                 Label l = laa.getAssignedLabel(task);
-                if (l!=null)    return l;
+                if (l != null)    return l;
             }
             return task.getAssignedLabel();
         }
@@ -2215,7 +2250,7 @@ public class Queue extends ResourceController implements Saveable {
          * Test if the specified {@link SubTask} needs to be run on a node with a particular label.
          * <p>
          * This method takes {@link LabelAssignmentAction} into account, the first
-         * non-null assignment will be returned. 
+         * non-null assignment will be returned.
          * Otherwise falls back to {@link SubTask#getAssignedLabel()}
          * @param st {@link SubTask} to be checked.
          * @return Required {@link Label}. Otherwise null, indicating it can run on anywhere.
@@ -2224,7 +2259,7 @@ public class Queue extends ResourceController implements Saveable {
         public @CheckForNull Label getAssignedLabelFor(@NonNull SubTask st) {
             for (LabelAssignmentAction laa : getActions(LabelAssignmentAction.class)) {
                 Label l = laa.getAssignedLabel(st);
-                if (l!=null)    return l;
+                if (l != null)    return l;
             }
             return st.getAssignedLabel();
         }
@@ -2237,12 +2272,13 @@ public class Queue extends ResourceController implements Saveable {
          */
         public final List<Cause> getCauses() {
             CauseAction ca = getAction(CauseAction.class);
-            if (ca!=null)
+            if (ca != null)
                 return Collections.unmodifiableList(ca.getCauses());
             return Collections.emptyList();
         }
 
         @Restricted(DoNotUse.class) // used from Jelly
+        @Override
         public String getCausesDescription() {
             List<Cause> causes = getCauses();
             StringBuilder s = new StringBuilder();
@@ -2252,20 +2288,16 @@ public class Queue extends ResourceController implements Saveable {
             return s.toString();
         }
 
-        protected Item(Task task, List<Action> actions, long id, FutureImpl future) {
-            this.task = task;
-            this.id = id;
-            this.future = future;
-            this.inQueueSince = System.currentTimeMillis();
-            for (Action action: actions) addAction(action);
+        protected Item(@NonNull Task task, @NonNull List<Action> actions, long id, FutureImpl future) {
+            this(task, actions, id, future, System.currentTimeMillis());
         }
 
-        protected Item(Task task, List<Action> actions, long id, FutureImpl future, long inQueueSince) {
+        protected Item(@NonNull Task task, @NonNull List<Action> actions, long id, FutureImpl future, long inQueueSince) {
             this.task = task;
             this.id = id;
             this.future = future;
             this.inQueueSince = inQueueSince;
-            for (Action action: actions) addAction(action);
+            for (Action action : actions) addAction(action);
         }
 
         @SuppressWarnings("deprecation") // JENKINS-51584
@@ -2283,16 +2315,17 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public String getUrl() {
-            return "queue/item/"+id+'/';
+            return "queue/item/" + id + '/';
         }
 
         /**
          * Gets a human-readable status message describing why it's in the queue.
          */
         @Exported
+        @Override
         public final String getWhy() {
             CauseOfBlockage cob = getCauseOfBlockage();
-            return cob!=null ? cob.getShortDescription() : null;
+            return cob != null ? cob.getShortDescription() : null;
         }
 
         /**
@@ -2305,6 +2338,7 @@ public class Queue extends ResourceController implements Saveable {
          * @return String
          */
         @Exported
+        @Override
         public String getParams() {
             StringBuilder s = new StringBuilder();
             for (ParametersAction pa : getActions(ParametersAction.class)) {
@@ -2313,19 +2347,6 @@ public class Queue extends ResourceController implements Saveable {
                 }
             }
             return s.toString();
-        }
-
-        /**
-         * Checks whether a scheduled item may be canceled.
-         * @return by default, the same as {@link hudson.model.Queue.Task#hasAbortPermission}
-         */
-        public boolean hasCancelPermission() {
-            return task.hasAbortPermission();
-        }
-
-        @Override
-        public String getDisplayName() {
-            return null;
         }
 
         @Override
@@ -2337,7 +2358,7 @@ public class Queue extends ResourceController implements Saveable {
         @Deprecated
         @RequirePOST
         public HttpResponse doCancelQueue() {
-            if(hasCancelPermission()){
+            if (hasCancelPermission()) {
                 Jenkins.get().getQueue().cancel(this);
             }
             return HttpResponses.status(HttpServletResponse.SC_NO_CONTENT);
@@ -2357,7 +2378,7 @@ public class Queue extends ResourceController implements Saveable {
         public Authentication authenticate2() {
             for (QueueItemAuthenticator auth : QueueItemAuthenticatorProvider.authenticators()) {
                 Authentication a = auth.authenticate2(this);
-                if (a!=null)
+                if (a != null)
                     return a;
             }
             return task.getDefaultAuthentication2(this);
@@ -2386,6 +2407,10 @@ public class Queue extends ResourceController implements Saveable {
             } else { // err on the safe side
                 return null;
             }
+        }
+
+        public HttpResponse doIndex(StaplerRequest2 req) {
+            return HttpResponses.text("Queue item exists. For details check, for example, " + req.getRequestURI() + "api/json?tree=cancelled,executable[url]");
         }
 
         protected Object readResolve() {
@@ -2453,8 +2478,8 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Restricted(NoExternalUse.class)
     @ExportedBean(defaultVisibility = 999)
-    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "it is exported, so it might be used")
-    public class StubItem {
+    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
+    public static class StubItem {
 
         @Exported public StubTask task;
 
@@ -2463,7 +2488,7 @@ public class Queue extends ResourceController implements Saveable {
         }
 
     }
-    
+
     /**
      * An optional interface for actions on Queue.Item.
      * Lets the action cooperate in queue management.
@@ -2514,8 +2539,6 @@ public class Queue extends ResourceController implements Saveable {
      * {@link Item} in the {@link Queue#waitingList} stage.
      */
     public static final class WaitingItem extends Item implements Comparable<WaitingItem> {
-        private static final AtomicLong COUNTER = new AtomicLong(0);
-
         /**
          * This item can be run after this time.
          */
@@ -2523,12 +2546,8 @@ public class Queue extends ResourceController implements Saveable {
         public Calendar timestamp;
 
         public WaitingItem(Calendar timestamp, Task project, List<Action> actions) {
-            super(project, actions, COUNTER.incrementAndGet(), new FutureImpl(project));
+            super(project, actions, QueueIdStrategy.get().generateIdFor(project, actions), new FutureImpl(project));
             this.timestamp = timestamp;
-        }
-
-        static int getCurrentCounterValue() {
-            return COUNTER.intValue();
         }
 
         @Override
@@ -2551,7 +2570,7 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         /*package*/ void enter(Queue q) {
             if (q.waitingList.add(this)) {
-                Listeners.notify(QueueListener.class, l -> l.onEnterWaiting(this));
+                Listeners.notify(QueueListener.class, true, l -> l.onEnterWaiting(this));
             }
         }
 
@@ -2559,7 +2578,7 @@ public class Queue extends ResourceController implements Saveable {
         /*package*/ boolean leave(Queue q) {
             boolean r = q.waitingList.remove(this);
             if (r) {
-                Listeners.notify(QueueListener.class, l -> l.onLeaveWaiting(this));
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveWaiting(this));
             }
             return r;
         }
@@ -2616,6 +2635,15 @@ public class Queue extends ResourceController implements Saveable {
             this.causeOfBlockage = causeOfBlockage;
         }
 
+        @Restricted(NoExternalUse.class)
+        public boolean isCauseOfBlockageNull() {
+            if (causeOfBlockage == null) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+
         @Override
         public CauseOfBlockage getCauseOfBlockage() {
             if (causeOfBlockage != null) {
@@ -2630,7 +2658,7 @@ public class Queue extends ResourceController implements Saveable {
         /*package*/ void enter(Queue q) {
             LOGGER.log(Level.FINE, "{0} is blocked", this);
             blockedProjects.add(this);
-            Listeners.notify(QueueListener.class, l -> l.onEnterBlocked(this));
+            Listeners.notify(QueueListener.class, true, l -> l.onEnterBlocked(this));
         }
 
                     @Override
@@ -2638,7 +2666,7 @@ public class Queue extends ResourceController implements Saveable {
             boolean r = blockedProjects.remove(this);
             if (r) {
                 LOGGER.log(Level.FINE, "{0} no longer blocked", this);
-                Listeners.notify(QueueListener.class, l -> l.onLeaveBlocked(this));
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveBlocked(this));
             }
             return r;
         }
@@ -2670,7 +2698,7 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         public CauseOfBlockage getCauseOfBlockage() {
             Jenkins jenkins = Jenkins.get();
-            if(isBlockedByShutdown(task))
+            if (isBlockedByShutdown(task))
                 return CauseOfBlockage.fromMessage(Messages._Queue_HudsonIsAboutToShutDown());
 
             List<CauseOfBlockage> causesOfBlockage = transientCausesOfBlockage;
@@ -2702,18 +2730,18 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         public boolean isStuck() {
             Label label = getAssignedLabel();
-            if(label!=null && label.isOffline())
+            if (label != null && label.isOffline())
                 // no executor online to process this job. definitely stuck.
                 return true;
 
             long d = task.getEstimatedDuration();
-            long elapsed = System.currentTimeMillis()-buildableStartMilliseconds;
-            if(d>=0) {
+            long elapsed = System.currentTimeMillis() - buildableStartMilliseconds;
+            if (d >= 0) {
                 // if we were running elsewhere, we would have done this build ten times.
-                return elapsed > Math.max(d,60000L)*10;
+                return elapsed > Math.max(d, 60000L) * 10;
             } else {
                 // more than a day in the queue
-                return TimeUnit.MILLISECONDS.toHours(elapsed)>24;
+                return TimeUnit.MILLISECONDS.toHours(elapsed) > 24;
             }
         }
 
@@ -2725,7 +2753,7 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         /*package*/ void enter(Queue q) {
             q.buildables.add(this);
-            Listeners.notify(QueueListener.class, l -> l.onEnterBuildable(this));
+            Listeners.notify(QueueListener.class, true, l -> l.onEnterBuildable(this));
         }
 
         @Override
@@ -2733,7 +2761,7 @@ public class Queue extends ResourceController implements Saveable {
             boolean r = q.buildables.remove(this);
             if (r) {
                 LOGGER.log(Level.FINE, "{0} no longer blocked", this);
-                Listeners.notify(QueueListener.class, l -> l.onLeaveBuildable(this));
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveBuildable(this));
             }
             return r;
         }
@@ -2775,7 +2803,7 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public @CheckForNull Executable getExecutable() {
-            return outcome!=null ? outcome.getPrimaryWorkUnit().getExecutable() : null;
+            return outcome != null ? outcome.getPrimaryWorkUnit().getExecutable() : null;
         }
 
         /**
@@ -2783,13 +2811,13 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public boolean isCancelled() {
-            return outcome==null;
+            return outcome == null;
         }
 
         @Override
         void enter(Queue q) {
-            q.leftItems.put(getId(),this);
-            Listeners.notify(QueueListener.class, l -> l.onLeft(this));
+            q.leftItems.put(getId(), this);
+            Listeners.notify(QueueListener.class, true, l -> l.onLeft(this));
         }
 
         @Override
@@ -2817,7 +2845,7 @@ public class Queue extends ResourceController implements Saveable {
             @Override
             public Object fromString(String string) {
                 Object item = Jenkins.get().getItemByFullName(string);
-                if(item==null)  throw new NoSuchElementException("No such job exists: "+string);
+                if (item == null)  throw new NoSuchElementException("No such job exists: " + string);
                 return item;
             }
 
@@ -2838,16 +2866,16 @@ public class Queue extends ResourceController implements Saveable {
                 String[] split = string.split("#");
                 String projectName = split[0];
                 int buildNumber = Integer.parseInt(split[1]);
-                Job<?,?> job = (Job<?,?>) Jenkins.get().getItemByFullName(projectName);
-                if(job==null)  throw new NoSuchElementException("No such job exists: "+projectName);
-                Run<?,?> run = job.getBuildByNumber(buildNumber);
-                if(run==null)  throw new NoSuchElementException("No such build: "+string);
+                Job<?, ?> job = (Job<?, ?>) Jenkins.get().getItemByFullName(projectName);
+                if (job == null)  throw new NoSuchElementException("No such job exists: " + projectName);
+                Run<?, ?> run = job.getBuildByNumber(buildNumber);
+                if (run == null)  throw new NoSuchElementException("No such build: " + string);
                 return run;
             }
 
             @Override
             public String toString(Object object) {
-                Run<?,?> run = (Run<?,?>) object;
+                Run<?, ?> run = (Run<?, ?>) object;
                 return run.getParent().getFullName() + "#" + run.getNumber();
             }
         });
@@ -2904,7 +2932,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     private class ItemList<T extends Item> extends ArrayList<T> {
         public T get(Task task) {
-            for (T item: this) {
+            for (T item : this) {
                 if (item.task.equals(task)) {
                     return item;
                 }
@@ -2914,7 +2942,7 @@ public class Queue extends ResourceController implements Saveable {
 
         public List<T> getAll(Task task) {
             List<T> result = new ArrayList<>();
-            for (T item: this) {
+            for (T item : this) {
                 if (item.task.equals(task)) {
                     result.add(item);
                 }
@@ -2952,7 +2980,7 @@ public class Queue extends ResourceController implements Saveable {
          */
         public T cancel(Task p) {
             T x = get(p);
-            if(x!=null) x.cancel(Queue.this);
+            if (x != null) x.cancel(Queue.this);
             return x;
         }
 
@@ -2985,7 +3013,7 @@ public class Queue extends ResourceController implements Saveable {
             return "Queue.Snapshot{waitingList=" + waitingList + ";blockedProjects=" + blockedProjects + ";buildables=" + buildables + ";pendings=" + pendings + "}";
         }
     }
-    
+
     private static class LockedRunnable implements Runnable  {
         private final Runnable delegate;
 
@@ -3026,11 +3054,11 @@ public class Queue extends ResourceController implements Saveable {
         }
     }
 
-    private static class LockedHRCallable<V,T extends Throwable> implements hudson.remoting.Callable<V,T> {
+    private static class LockedHRCallable<V, T extends Throwable> implements hudson.remoting.Callable<V, T> {
         private static final long serialVersionUID = 1L;
-        private final hudson.remoting.Callable<V,T> delegate;
+        private final hudson.remoting.Callable<V, T> delegate;
 
-        private LockedHRCallable(hudson.remoting.Callable<V,T> delegate) {
+        private LockedHRCallable(hudson.remoting.Callable<V, T> delegate) {
             this.delegate = delegate;
         }
 
@@ -3053,7 +3081,7 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * Restores the queue content during the start up.
      */
-    @Initializer(after=JOB_CONFIG_ADAPTED)
+    @Initializer(after = JOB_CONFIG_ADAPTED)
     public static void init(Jenkins h) {
         Queue queue = h.getQueue();
         Item[] items = queue.getItems();
