@@ -6,8 +6,8 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang.StringUtils;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -31,7 +31,7 @@ public class TextFileTest {
     @Test
     public void shortHead() throws Exception {
         File f = tmp.newFile();
-        FileUtils.write(f, "hello", Charset.defaultCharset());
+        Files.writeString(f.toPath(), "hello", Charset.defaultCharset());
 
         TextFile t = new TextFile(f);
         assertEquals("hello", t.head(35));
@@ -41,7 +41,7 @@ public class TextFileTest {
     public void tail() throws Exception {
         File f = tmp.newFile();
         FileUtils.copyURLToFile(getClass().getResource("ascii.txt"), f);
-        String whole = FileUtils.readFileToString(f, Charset.defaultCharset());
+        String whole = Files.readString(f.toPath(), Charset.defaultCharset());
         TextFile t = new TextFile(f);
         String tailStr = whole.substring(whole.length() - 34);
         assertEquals(tailStr, t.fastTail(tailStr.length()));
@@ -50,7 +50,7 @@ public class TextFileTest {
     @Test
     public void shortTail() throws Exception {
         File f = tmp.newFile();
-        FileUtils.write(f, "hello", Charset.defaultCharset());
+        Files.writeString(f.toPath(), "hello", Charset.defaultCharset());
 
         TextFile t = new TextFile(f);
         assertEquals("hello", t.fastTail(35));
@@ -79,7 +79,7 @@ public class TextFileTest {
         }
 
         String tail = t.fastTail(35, Charset.forName("Shift_JIS"));
-        assertEquals(StringUtils.repeat("\u30e2", 34) + "\n", tail);
+        assertEquals("\u30e2".repeat(34) + "\n", tail);
         assertEquals(35, tail.length());
 
         // add one more byte to force fastTail to read from one byte ahead
@@ -90,7 +90,7 @@ public class TextFileTest {
         }
 
         tail = t.fastTail(35, Charset.forName("Shift_JIS"));
-        assertEquals(StringUtils.repeat("\u30e2", 33) + "\n\n", tail);
+        assertEquals("\u30e2".repeat(33) + "\n\n", tail);
         assertEquals(35, tail.length());
     }
 
